@@ -1,45 +1,112 @@
 ---
-"date": "2025-05-08"
-"description": "Μάθετε πώς να χρησιμοποιείτε το GroupDocs.Signature για Java για να διαχειρίζεστε και να υποστηρίζετε αποτελεσματικά ποικίλες μορφές αρχείων. Βελτιώστε το σύστημα διαχείρισης εγγράφων σας με αυτόν τον οδηγό βήμα προς βήμα."
-"title": "Υποστήριξη μορφής κύριου αρχείου στο GroupDocs.Signature για Java&#58; Ένας πλήρης οδηγός"
-"url": "/el/java/advanced-options/groupdocs-signature-java-file-format-support/"
-"weight": 1
+categories:
+- Java Document Processing
+date: '2026-05-11'
+description: Learn how to check file extension java and validate document formats
+  using GroupDocs.Signature. Complete guide with code examples, troubleshooting tips,
+  and best practices for document type checking.
+keywords:
+- check file extension java
+- validate document type java
+- java upload file validation
+- how to detect file format java
+lastmod: '2025-01-02'
+linktitle: Java File Format Detection Guide
+schemas:
+- author: GroupDocs
+  dateModified: '2026-05-11'
+  description: Learn how to check file extension java and validate document formats
+    using GroupDocs.Signature. Complete guide with code examples, troubleshooting
+    tips, and best practices for document type checking.
+  headline: Java File Format Detection - Validate and Check Document Types
+  type: TechArticle
+- questions:
+  - answer: Change the `<version>` tag in your `pom.xml` to the desired version, then
+      run `mvn clean install`. Always review the [release notes](https://releases.groupdocs.com/signature/java/)
+      for breaking changes.
+    question: How do I update my GroupDocs.Signature library version in Maven?
+  - answer: Yes. The library performs content‑based validation, so a file renamed
+      from `.exe` to `.pdf` will be rejected as not a valid PDF during processing.
+      `getSupportedFileTypes()` only lists formats the library can handle; you still
+      need to attempt opening the file to verify its true type.
+    question: Can GroupDocs.Signature detect file formats even if the extension is
+      wrong?
+  - answer: The free trial gives immediate access but includes evaluation watermarks
+      and some feature limits. A temporary license provides full feature access for
+      30 days without watermarks, ideal for thorough testing in a production‑like
+      environment.
+    question: What's the difference between a free trial and temporary license?
+  - answer: 'Return a concise error like “Unsupported format. Supported extensions
+      are: .pdf, .docx, .xlsx, .png, .jpg.” Log the incident for security monitoring
+      and consider notifying the user with a UI tooltip that lists allowed types.'
+    question: How should I handle unsupported file formats in my application?
+  - answer: Yes, but you must supply the password when creating the `Signature` instance.
+      Format detection itself does not require the password, but any subsequent processing
+      (e.g., adding a signature) will.
+    question: Does GroupDocs.Signature work with encrypted or password‑protected files?
+  type: FAQPage
+tags:
+- file-validation
+- java-libraries
+- document-management
+- format-detection
+title: Java File Format Detection - Validate and Check Document Types
 type: docs
+url: /el/java/advanced-options/groupdocs-signature-java-file-format-support/
+weight: 1
 ---
-# Υποστήριξη μορφής κύριου αρχείου στο GroupDocs.Signature για Java: Ένας πλήρης οδηγός
 
-## Εισαγωγή
+# ελέγξτε την επέκταση αρχείου java – Ανίχνευση μορφής αρχείου Java: Επικύρωση και Έλεγχος Τύπων Εγγράφων
 
-Η βελτίωση του συστήματος διαχείρισης εγγράφων σας υποστηρίζοντας ένα ευρύ φάσμα μορφών αρχείων μπορεί να βελτιστοποιηθεί χρησιμοποιώντας τη βιβλιοθήκη GroupDocs.Signature για Java. Αυτό το σεμινάριο παρέχει μια λεπτομερή επεξήγηση σχετικά με τον τρόπο χρήσης αυτού του ισχυρού εργαλείου, επιτρέποντας την απρόσκοπτη ενσωμάτωση και την ισχυρή λειτουργικότητα στις εφαρμογές σας.
+Ένα από τα πιο συνηθισμένα καθήκοντα είναι να **ελέγξετε την επέκταση αρχείου java** πριν επεξεργαστείτε ένα έγγραφο.  
 
-### Τι θα μάθετε:
-- Υλοποίηση του GroupDocs.Signature για Java για την ανάκτηση υποστηριζόμενων μορφών αρχείων.
-- Ρύθμιση εξαρτήσεων και διαμόρφωση του περιβάλλοντός σας.
-- Διερεύνηση πρακτικών εφαρμογών και δυνατοτήτων ενσωμάτωσης με άλλα συστήματα.
-- Εφαρμογή τεχνικών βελτιστοποίησης απόδοσης ειδικά για τη βιβλιοθήκη.
+Έχετε ποτέ ανεβάσει ένα αρχείο μόνο και η εφαρμογή σας να καταρρεύσει επειδή δεν ήταν η αναμενόμενη μορφή; Δεν είστε μόνοι. Η ανίχνευση και η επικύρωση μορφών αρχείων σε Java είναι κρίσιμη για την κατασκευή αξιόπιστων εφαρμογών επεξεργασίας εγγράφων—αλλά είναι πιο δύσκολη από τον απλό έλεγχο των επεκτάσεων (που μπορούν εύκολα να πλαστογραφηθούν ή να είναι λανθασμένες).
 
-Ξεκινήστε αυτό το ταξίδι για να διασφαλίσετε ότι το σύστημά σας μπορεί να χειρίζεται εύκολα διαφορετικούς τύπους εγγράφων. Πριν ξεκινήσουμε, βεβαιωθείτε ότι έχετε έτοιμες όλες τις απαραίτητες προϋποθέσεις για μια ομαλή εμπειρία εγκατάστασης.
+Σε αυτόν τον οδηγό, θα μάθετε πώς να ανιχνεύετε αξιόπιστα μορφές αρχείων σε Java χρησιμοποιώντας το GroupDocs.Signature, μια ισχυρή βιβλιοθήκη που πηγαίνει πέρα από τον απλό έλεγχο επεκτάσεων. Είτε δημιουργείτε σύστημα διαχείρισης εγγράφων, είτε επικυρώνετε μεταφορτώσεις χρηστών, είτε ενσωματώνετε υπηρεσίες αποθήκευσης στο cloud, θα ανακαλύψετε πρακτικές τεχνικές για να χειρίζεστε με σιγουριά διάφορους τύπους εγγράφων.
+
+**Τι θα μάθετε:**
+- Πώς να ανακτήσετε προγραμματιστικά τις υποστηριζόμενες μορφές αρχείων σε Java
+- Πότε να χρησιμοποιήσετε ανίχνευση με βάση τη βιβλιοθήκη έναντι ενσωματωμένων προσεγγίσεων της Java
+- Συνηθισμένες παγίδες κατά την επικύρωση τύπων αρχείων (και πώς να τις αποφύγετε)
+- Σενάρια πραγματικής ενσωμάτωσης και συμβουλές βελτιστοποίησης απόδοσης
+- Στρατηγικές αντιμετώπισης προβλημάτων για ζητήματα ανίχνευσης μορφών
+
+Στο τέλος, θα έχετε μια λειτουργική υλοποίηση που μπορείτε να ενσωματώσετε άμεσα στις εφαρμογές Java σας. Ας ξεκινήσουμε βεβαιώνοντας ότι έχετε όλα όσα χρειάζεστε.
+
+## Γρήγορες Απαντήσεις
+- **Ποιος είναι ο πιο γρήγορος τρόπος για να ελέγξετε την επέκταση αρχείου java;** Χρησιμοποιήστε `Signature.getSupportedFileTypes()` για να ανακτήσετε τη πλήρη λίστα και να συγκρίνετε την επέκταση του αρχείου με αυτήν.
+- **Χρειάζομαι άδεια χρήσης για το GroupDocs.Signature;** Μια δωρεάν δοκιμή λειτουργεί για ανάπτυξη· μια μόνιμη άδεια αφαιρεί όλους τους περιορισμούς αξιολόγησης.
+- **Μπορώ να επικυρώσω μεταφορτώσεις χωρίς να διαβάσω ολόκληρο το αρχείο;** Ναι—το GroupDocs.Signature εξετάζει την κεφαλίδα του αρχείου, κάτι πολύ φθηνότερο από τη φόρτωση ολόκληρου του εγγράφου.
+- **Πόσες μορφές υποστηρίζει το GroupDocs.Signature;** Πάνω από 50 μορφές εισόδου και εξόδου, συμπεριλαμβανομένων PDF, DOCX, XLSX, PPTX, JPG, PNG και πολλών άλλων.
+- **Είναι απαραίτητο το caching της λίστας μορφών;** Το caching εξαλείφει το επαναλαμβανόμενο κόστος reflection και βελτιώνει το throughput για υπηρεσίες υψηλού όγκου.
 
 ## Προαπαιτούμενα
 
-Πριν από την υλοποίηση του GroupDocs.Signature για Java, προετοιμαστείτε με αυτές τις απαιτήσεις:
+Πριν βυθιστείτε στην ανίχνευση μορφών αρχείων, βεβαιωθείτε ότι έχετε τα εξής έτοιμα:
 
-### Απαιτούμενες βιβλιοθήκες και εκδόσεις:
-- **Βιβλιοθήκη GroupDocs.Signature**Συνιστάται η έκδοση 23.12 ή νεότερη.
-- Βεβαιωθείτε ότι το περιβάλλον ανάπτυξής σας υποστηρίζει Java (JDK 1.8+).
+### Απαιτούμενες Βιβλιοθήκες και Εκδόσεις
+- **GroupDocs.Signature Library**: Έκδοση 23.12 ή νεότερη (θα χρησιμοποιήσουμε την πιο πρόσφατη σταθερή έκδοση)
+- **Java Development Kit**: JDK 1.8 ή νεότερο (συνιστάται JDK 11+ για καλύτερη απόδοση)
+- **Εργαλείο Κατασκευής**: Maven 3.x ή Gradle 6.x για διαχείριση εξαρτήσεων
 
-### Απαιτήσεις Ρύθμισης Περιβάλλοντος:
-- Βασική κατανόηση του Maven ή του Gradle για τη διαχείριση εξαρτήσεων.
-- Εξοικείωση με τις βασικές έννοιες προγραμματισμού Java.
+### Απαιτήσεις Ρύθμισης Περιβάλλοντος
+Θα πρέπει να είστε άνετοι με:
+- Βασικές έννοιες προγραμματισμού Java (κλάσεις, βρόχοι, imports)
+- Χρήση Maven ή Gradle για διαχείριση εξαρτήσεων
+- Εκτέλεση εφαρμογών Java από το IDE ή τη γραμμή εντολών
 
-Έχοντας θέσει αυτές τις προϋποθέσεις, ας προχωρήσουμε στη ρύθμιση του GroupDocs.Signature για Java στο έργο σας.
+**Γρήγορη συμβουλή:** Αν εργάζεστε με μεγάλα έγγραφα ή σχεδιάζετε ταυτόχρονη επεξεργασία αρχείων, διαθέστε επαρκή μνήμη heap στο JVM (θα καλύψουμε βελτιστοποίηση αργότερα).
 
-## Ρύθμιση του GroupDocs.Signature για Java
+Με το περιβάλλον έτοιμο, ας προχωρήσουμε στη ρύθμιση του GroupDocs.Signature στο έργο σας.
 
-Η ρύθμιση της βιβλιοθήκης GroupDocs.Signature είναι απλή χρησιμοποιώντας διαχειριστές πακέτων όπως το Maven ή το Gradle. Ακολουθήστε τα παρακάτω βήματα:
+## Ρύθμιση GroupDocs.Signature για Java
 
-### Χρησιμοποιώντας το Maven:
-Προσθέστε αυτήν την εξάρτηση στο δικό σας `pom.xml` αρχείο:
+Η προσθήκη του GroupDocs.Signature στο έργο σας είναι απλή—επιλέξτε το εργαλείο κατασκευής που προτιμάτε και ακολουθήστε τις οδηγίες.
+
+### Χρήση Maven
+
+Προσθέστε αυτήν την εξάρτηση στο αρχείο `pom.xml`:
+
 ```xml
 <dependency>
     <groupId>com.groupdocs</groupId>
@@ -47,106 +114,580 @@ type: docs
     <version>23.12</version>
 </dependency>
 ```
-### Χρησιμοποιώντας το Gradle:
-Συμπεριλάβετε αυτήν τη γραμμή στο δικό σας `build.gradle` αρχείο:
+
+Μετά την προσθήκη, εκτελέστε `mvn clean install` για να κατεβάσετε τη βιβλιοθήκη.
+
+### Χρήση Gradle
+
+Συμπεριλάβετε αυτή τη γραμμή στο αρχείο `build.gradle`:
+
 ```gradle
 implementation 'com.groupdocs:groupdocs-signature:23.12'
 ```
-### Άμεση λήψη:
-Εναλλακτικά, κατεβάστε την τελευταία έκδοση από το [GroupDocs.Signature για εκδόσεις Java](https://releases.groupdocs.com/signature/java/).
 
-#### Βήματα απόκτησης άδειας:
-- **Δωρεάν δοκιμή**: Διαθέσιμο για δοκιμή λειτουργιών.
-- **Προσωρινή Άδεια**Αποκτήστε προσωρινή άδεια για απεριόριστη πρόσβαση κατά τη διάρκεια της αξιολόγησης.
-- **Αγορά**Αγοράστε μια μόνιμη άδεια χρήσης από [Σελίδα Αγοράς GroupDocs](https://purchase.groupdocs.com/buy) αν είναι ικανοποιημένος με τη δίκη.
+Στη συνέχεια συγχρονίστε το έργο Gradle ή εκτελέστε `gradle build`.
+
+### Εναλλακτική Άμεση Λήψη
+
+Δεν χρησιμοποιείτε εργαλείο κατασκευής; Μπορείτε να κατεβάσετε το JAR απευθείας από [GroupDocs.Signature for Java releases](https://releases.groupdocs.com/signature/java/) και να το προσθέσετε στο classpath χειροκίνητα. (Ωστόσο, η χρήση Maven ή Gradle θα σας εξοικονομήσει πολύ κόπο.)
+
+### Βήματα Απόκτησης Άδειας
+
+Το GroupDocs.Signature προσφέρει ευέλικτες επιλογές αδειοδότησης:
+
+- **Δωρεάν Δοκιμή**: Ιδανική για δοκιμές—ξεκινήστε αμέσως χωρίς [χρέωση κάρτας](https://releases.groupdocs.com/signature/java/)
+- **Προσωρινή Άδεια**: Χρειάζεστε περισσότερο χρόνο για αξιολόγηση; Ζητήστε άδεια 30 ημερών για απεριόριστη πρόσβαση
+- **Αγορά**: Όταν είστε έτοιμοι για παραγωγή, αποκτήστε μόνιμη άδεια από τη [σελίδα αγοράς GroupDocs](https://purchase.groupdocs.com/buy)
+
+**Συμβουλή επαγγελματία:** Ξεκινήστε με τη δωρεάν δοκιμή για να εξερευνήσετε όλες τις δυνατότητες. Η προσωρινή άδεια αφαιρεί τα υδατογραφήματα και τους περιορισμούς αν χρειαστείτε εκτεταμένη αξιολόγηση.
 
 ### Βασική Αρχικοποίηση και Ρύθμιση
-Αρχικοποιήστε το GroupDocs.Signature στην εφαρμογή Java σας ως εξής:
+
+`Signature` είναι το κεντρικό σημείο εισόδου για όλες τις λειτουργίες του GroupDocs.Signature. Περιλαμβάνει τη φόρτωση εγγράφων, τη διαχείριση μορφών και την επεξεργασία υπογραφών.
+
+Ακολουθεί πώς να αρχικοποιήσετε το GroupDocs.Signature στην εφαρμογή Java:
+
 ```java
 import com.groupdocs.signature.Signature;
-// Δημιουργήστε μια παρουσία της κλάσης Signature.
+
+// Create an instance of Signature class
 Signature signature = new Signature("sample.pdf");
 ```
-Αφού ολοκληρωθεί η εγκατάσταση, ας εξερευνήσουμε πώς να εφαρμόσουμε τη λειτουργία για να αποκτήσουμε τις υποστηριζόμενες μορφές αρχείων.
 
-## Οδηγός Εφαρμογής
+Αυτό δημιουργεί ένα αντικείμενο signature για το καθορισμένο έγγραφο. Θα χρησιμοποιήσετε αυτό το μοτίβο όταν δουλεύετε με πραγματικά έγγραφα, αλλά για την ανάκτηση υποστηριζόμενων μορφών δεν χρειάζεται συγκεκριμένο αρχείο (θα το δούμε στην επόμενη ενότητα).
 
-Αυτή η ενότητα σάς καθοδηγεί στην υλοποίηση λειτουργιών για την ανάκτηση και εμφάνιση μιας λίστας υποστηριζόμενων μορφών αρχείων χρησιμοποιώντας το GroupDocs.Signature για Java.
+Τώρα που η ρύθμιση ολοκληρώθηκε, ας υλοποιήσουμε τη βασική λειτουργικότητα για την ανίχνευση και ανάκτηση υποστηριζόμενων μορφών αρχείων.
 
-### Επισκόπηση
-Ο κύριος στόχος είναι η χρήση του `FileType` βοηθητικό πρόγραμμα μέσα στη βιβλιοθήκη για την ανάκτηση όλων των υποστηριζόμενων τύπων αρχείων. Αυτή η λειτουργία επιτρέπει στην εφαρμογή σας να προσαρμόζεται δυναμικά σε διάφορους τύπους εγγράφων χωρίς προηγούμενη κωδικοποίηση.
+## Οδηγός Υλοποίησης
 
-#### Βήμα προς βήμα εφαρμογή
-**1. Εισαγωγή απαραίτητων κλάσεων**
-Ξεκινήστε εισάγοντας τις απαιτούμενες κλάσεις από το GroupDocs.Signature:
+Εδώ γίνεται πρακτικό. Θα δημιουργήσουμε ένα απλό εργαλείο που ανακτά όλες τις υποστηριζόμενες μορφές αρχείων—σαν «ελεγκτής συμβατότητας» για τη γραμμή επεξεργασίας εγγράφων σας.
+
+### Γιατί Είναι Σημαντικό
+
+Πριν αφιερώσετε χρόνο στην υλοποίηση λειτουργιών επεξεργασίας εγγράφων, πρέπει να ξέρετε ποιους τύπους αρχείων υποστηρίζει η βιβλιοθήκη σας. Αυτή η υλοποίηση σας παρέχει τις πληροφορίες δυναμικά, πράγμα που σημαίνει:
+- Δεν χρειάζεται να κωδικοποιείτε σκληρά λίστες επεκτάσεων που γίνονται παρωχημένες
+- Εύκολη επικύρωση μεταφορτώσεων χρηστών έναντι των υποστηριζόμενων μορφών
+- Γρήγορη αναφορά για τη δημιουργία φίλτρων τύπων αρχείων στο UI σας
+
+### Βήμα‑Βήμα Υλοποίηση
+
+**1. Εισαγωγή Απαραίτητων Κλάσεων**
+
+`FileType` είναι η πύλη για την ανίχνευση μορφών—περιέχει όλα τα μεταδεδομένα για τις υποστηριζόμενες μορφές εγγράφων.
+
 ```java
 import com.groupdocs.signature.domain.documentpreview.FileType;
 import java.util.List;
 ```
-**2. Δημιουργήστε μια κλάση για λειτουργικότητα ανάκτησης**
-Δημιουργήστε μια κλάση με το όνομα `GetSupportedFileFormats` και περιλαμβάνουν την κύρια λειτουργικότητα για την ανάκτηση τύπων αρχείων:
+
+Η κλάση `FileType` είναι ο περιγραφέας του GroupDocs.Signature για κάθε μορφή, εκθέτοντας ιδιότητες όπως επέκταση, MIME type και περιγραφή.
+
+**2. Δημιουργία της Κλάσης Ανάκτησης**
+
+Ακολουθεί η πλήρης υλοποίηση:
+
 ```java
 public class GetSupportedFileFormats {
     public static void run() {
-        // Ανακτήστε μια λίστα με τους υποστηριζόμενους τύπους αρχείων από το βοηθητικό πρόγραμμα FileType.
+        // Retrieve a list of supported file types from the FileType utility.
         List<FileType> supportedFileTypes = FileType.getSupportedFileTypes();
 
-        // Επαναλάβετε κάθε αντικείμενο FileType και εκτυπώστε την επέκτασή του στην κονσόλα.
+        // Iterate over each FileType object and print its extension to the console.
         for (FileType fileType : supportedFileTypes) {
             System.out.print("\n" + fileType.getExtension());
         }
     }
 }
 ```
-**Εξήγηση:**
-- `getSupportedFileTypes()`: Ανακτά όλες τις μορφές αρχείων που υποστηρίζει το GroupDocs.Signature, επιστρέφοντάς τες ως λίστα `FileType` αντικείμενα.
-- Ο βρόχος επαναλαμβάνει τη λίστα και εμφανίζει κάθε επέκταση αρχείου.
 
-### Βασικές επιλογές διαμόρφωσης
-Ενώ αυτή η λειτουργία είναι απλή, βεβαιωθείτε ότι το περιβάλλον της εφαρμογής σας έχει ρυθμιστεί σωστά για να χειρίζεται πιθανές εξαιρέσεις ή μεγάλες λίστες υποστηριζόμενων τύπων.
+**Τι συμβαίνει εδώ:**
+- `getSupportedFileTypes()`: Αυτή η στατική μέθοδος ερωτά το εσωτερικό μητρώο της βιβλιοθήκης και επιστρέφει πλήρη λίστα υποστηριζόμενων μορφών ως αντικείμενα `FileType`.
+- Ο βρόχος διατρέχει κάθε μορφή και εκτυπώνει την επέκτασή της (π.χ. `.pdf`, `.docx`, `.xlsx`).
+- Κάθε αντικείμενο `FileType` περιέχει επίσης πρόσθετα μεταδεδομένα που μπορείτε να αξιοποιήσετε (θα τα δούμε παρακάτω).
 
-**Συμβουλές αντιμετώπισης προβλημάτων:**
-- Επαληθεύστε ότι όλες οι εξαρτήσεις έχουν συμπεριληφθεί σωστά στη διαμόρφωση δημιουργίας του έργου σας.
-- Ελέγξτε για ενημερώσεις στη βιβλιοθήκη GroupDocs.Signature που ενδέχεται να επεκτείνουν την υποστήριξη σε πρόσθετες μορφές αρχείων.
+### Πέρα από τις Βασικές Επεκτάσεις
 
-## Πρακτικές Εφαρμογές
+Το αντικείμενο `FileType` παρέχει περισσότερα από τις επεκτάσεις. Δείτε τι άλλο μπορείτε να ανακτήσετε:
 
-Η κατανόηση των μορφών αρχείων που υποστηρίζονται από το GroupDocs.Signature μπορεί να ανοίξει το δρόμο για διάφορες πρακτικές εφαρμογές:
-1. **Συστήματα Διαχείρισης Εγγράφων**Αυτόματη προσαρμογή των διαδικασιών χειρισμού εγγράφων με βάση τις διαθέσιμες μορφές.
-2. **Ενσωμάτωση με υπηρεσίες αποθήκευσης στο cloud**Διασφαλίστε τη συμβατότητα κατά τη μεταφόρτωση ή λήψη εγγράφων από υπηρεσίες όπως το AWS S3 ή το Google Drive.
-3. **Εταιρικές Εφαρμογές**Βελτιώστε τις ροές εργασίας της επιχείρησης επιτρέποντας στους χρήστες να εργάζονται απρόσκοπτα με μια ποικιλία τύπων εγγράφων.
+```java
+for (FileType fileType : supportedFileTypes) {
+    System.out.println("Extension: " + fileType.getExtension());
+    System.out.println("Format: " + fileType.getFileFormat());
+    // Additional properties available depending on version
+}
+```
 
-## Παράγοντες Απόδοσης
-Η βελτιστοποίηση της απόδοσης της εφαρμογής σας κατά τη χρήση του GroupDocs.Signature περιλαμβάνει διάφορες στρατηγικές:
-- **Αποτελεσματική Διαχείριση Μνήμης**Διαχειριστείτε αποτελεσματικά τη μνήμη Java, ειδικά όταν χειρίζεστε μεγάλα έγγραφα.
-- **Οδηγίες Χρήσης Πόρων**Παρακολουθήστε τη χρήση πόρων και βελτιστοποιήστε την με βάση τις συγκεκριμένες ανάγκες της εφαρμογής σας.
+Χρήσιμο όταν χρειάζεται να εμφανίσετε φιλικά ονόματα μορφών ή να ομαδοποιήσετε μορφές ανά τύπο (έγγραφα vs. λογιστικά φύλλα vs. εικόνες).
 
-Η τήρηση αυτών των βέλτιστων πρακτικών θα βοηθήσει στη διατήρηση της βέλτιστης απόδοσης στις εφαρμογές σας.
+## Πότε να Χρησιμοποιήσετε Αυτή τη Προσέγγιση
 
-## Σύναψη
-Σε αυτό το σεμινάριο, εξερευνήσαμε πώς να χρησιμοποιήσετε το GroupDocs.Signature για Java για την ανάκτηση υποστηριζόμενων μορφών αρχείων, ενισχύοντας τις δυνατότητες της εφαρμογής σας. Ακολουθώντας τα βήματα υλοποίησης που περιγράφονται, μπορείτε να ενσωματώσετε απρόσκοπτα αυτήν τη λειτουργία στα έργα σας.
+Δεν κάθε κατάσταση απαιτεί λύση με βιβλιοθήκη. Εδώ είναι πότε η ανίχνευση του GroupDocs.Signature ξεχωρίζει:
 
-### Επόμενα βήματα:
-- Πειραματιστείτε με πρόσθετες λειτουργίες που προσφέρει το GroupDocs.Signature.
-- Εξερευνήστε επιλογές ενσωμάτωσης με άλλες υπηρεσίες ή πλατφόρμες.
+### Ιδανικές Περιπτώσεις Χρήσης
 
-Είστε έτοιμοι να ξεκινήσετε την εφαρμογή; Δοκιμάστε αυτές τις τεχνικές και δείτε πώς μπορούν να ωφελήσουν τις εφαρμογές Java σας!
+**1. Επικύρωση Μεταφορτώσεων Εγγράφων**  
+Όταν οι χρήστες ανεβάζουν αρχεία, θέλετε να επικυρώνετε τις μορφές στο server‑side (μην βασίζεστε μόνο στην επικύρωση client‑side). Αυτή η προσέγγιση σας επιτρέπει να ελέγχετε έναν ολοκληρωμένο κατάλογο υποστηριζόμενων μορών πριν την επεξεργασία.
 
-## Ενότητα Συχνών Ερωτήσεων
-1. **Πώς μπορώ να ενημερώσω την έκδοση της βιβλιοθήκης GroupDocs.Signature στο Maven;**
-   - Ενημερώστε το `<version>` ετικέτα στο δικό σας `pom.xml` αρχείο στον επιθυμητό αριθμό έκδοσης.
-2. **Μπορώ να χρησιμοποιήσω το GroupDocs.Signature με άλλες βιβλιοθήκες εγγράφων;**
-   - Ναι, μπορεί να ενσωματωθεί μαζί με άλλα εργαλεία επεξεργασίας εγγράφων για βελτιωμένη λειτουργικότητα.
-3. **Τι είναι μια προσωρινή άδεια χρήσης για το GroupDocs.Signature;**
-   - Μια προσωρινή άδεια χρήσης επιτρέπει την πλήρη πρόσβαση σε λειτουργίες κατά τη διάρκεια της αξιολόγησης χωρίς περιορισμούς.
-4. **Πώς μπορώ να χειριστώ μη υποστηριζόμενες μορφές αρχείων στην εφαρμογή μου;**
-   - Εφαρμόστε λογική χειρισμού σφαλμάτων για να διαχειρίζεστε και να ενημερώνετε τους χρήστες σχετικά με μη υποστηριζόμενα αρχεία με ομαλό τρόπο.
-5. **Υπάρχει κάποια κοινότητα ή φόρουμ υποστήριξης για το GroupDocs.Signature;**
-   - Ναι, μπορείτε να έχετε πρόσβαση σε υποστήριξη και συζητήσεις μέσω του [Φόρουμ GroupDocs](https://forum.groupdocs.com/c/signature/).
+**2. Δημιουργία Δυναμικών Φίλτρων Τύπων Αρχείων**  
+Κατασκευάζετε έναν επιλογέα αρχείων ή διεπαφή ανεβάσματος; Δημιουργήστε τη λίστα επιτρεπόμενων μορών δυναμικά αντί για στατικό πίνακα που μπορεί να ξεπεραστεί.
+
+**3. Πίπλες Επεξεργασίας Πολυμορφικών Εγγράφων**  
+Αν επεξεργάζεστε έγγραφα από διάφορες πηγές (συνημμένα email, αποθήκευση cloud, ανεβάσματα χρηστών), χρειάζεστε αξιόπιστη ανίχνευση μορφής για να κατευθύνετε τα αρχεία στους κατάλληλους χειριστές.
+
+**4. Ενσωμάτωση με Υπηρεσίες Αποθήκευσης Cloud**  
+Κατά το συγχρονισμό με AWS S3, Google Drive ή Azure Blob Storage, επικυρώστε τη συμβατότητα του εγγράφου πριν το κατεβάσετε και το επεξεργαστείτε—εξοικονομεί εύρος ζώνης και χρόνο επεξεργασίας.
+
+### Όταν οι Ενσωματωμένες Μέθοδοι της Java Αρκούν
+
+Για πιο απλές περιπτώσεις, οι ενσωματωμένες μεθόδους της Java μπορεί να είναι επαρκείς:
+- **Έλεγχος μόνο επέκτασης**: `file.getName().endsWith(".pdf")`
+- **Ανίχνευση MIME type**: `Files.probeContentType(path)`
+- **Βασική επικύρωση**: Όταν ελέγχετε την πηγή ανεβάσματος και εμπιστεύεστε τις επεκτάσεις
+
+**Σημαντική προειδοποίηση:** Οι ενσωματωμένες μέθοδοι μπορούν να εξαπατηθούν. Ένα αρχείο που μετονομάστηκε από `malicious.exe` σε `document.pdf` θα περάσει τον έλεγχο επέκτασης αλλά θα αποτύχει στην πραγματική επικύρωση. Το GroupDocs.Signature εκτελεί βαθύτερη ανάλυση περιεχομένου.
+
+## Συνηθισμένα Προβλήματα και Αντιμετώπιση
+
+Ακολουθούν τα προβλήματα που πιθανότατα θα συναντήσετε και πώς να τα λύσετε γρήγορα.
+
+### Πρόβλημα 1: Κενή ή Null Λίστα Επιστρέφεται
+
+**Σύμπτωμα:** `getSupportedFileTypes()` επιστρέφει κενή λίστα ή null.
+
+**Αιτίες & Λύσεις:**
+- **Μη σωστή αρχικοποίηση βιβλιοθήκης**: Ελέγξτε ότι η εξάρτηση Maven/Gradle έχει προστεθεί και συγχρονιστεί σωστά
+- **Ασυμβατότητα έκδοσης**: Βεβαιωθείτε ότι χρησιμοποιείτε έκδοση 23.12 ή νεότερη (παλαιότερες εκδόσεις μπορεί να έχουν διαφορετικό API)
+- **Προβλήματα classpath**: Αν χρησιμοποιείτε χειροκίνητα JAR, βεβαιωθείτε ότι έχουν προστεθεί σωστά στο classpath
+
+**Γρήγορη διόρθωση:**
+```java
+List<FileType> formats = FileType.getSupportedFileTypes();
+if (formats == null || formats.isEmpty()) {
+    System.err.println("Error: No file types loaded. Check library initialization.");
+    return;
+}
+```
+
+### Πρόβλημα 2: Λείπει Η Αναμενόμενη Μορφή
+
+**Σύμπτωμα:** Μια μορφή που περιμένετε να λειτουργεί δεν εμφανίζεται στη λίστα υποστηριζόμενων.
+
+**Πιθανές αιτίες:**
+- Χρησιμοποιείτε εξειδικευμένη μορφή που απαιτεί πρόσθετα plugins (ορισμένες μορφές CAD ή ιατρικής απεικόνισης χρειάζονται ξεχωριστά modules)
+- Η μορφή προστέθηκε σε νεότερη έκδοση—ελέγξτε τις σημειώσεις κυκλοφορίας
+- Η μορφή υποστηρίζεται μόνο για ανάγνωση, όχι για λειτουργίες υπογραφής (το GroupDocs.Signature εστιάζει στην προσθήκη υπογραφών)
+
+**Πρόσβαση εντοπισμού σφαλμάτων:**
+```java
+// Check for specific format
+boolean hasPDF = supportedFileTypes.stream()
+    .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(".pdf"));
+System.out.println("PDF supported: " + hasPDF);
+```
+
+### Πρόβλημα 3: Υποβάθμιση Απόδοσης με Μεγάλες Λίστες Μορφών
+
+**Σύμπτωμα:** Η επαναλαμβανόμενη κλήση `getSupportedFileTypes()` επιβραδύνει την εφαρμογή.
+
+**Λύση:** Cache τα αποτελέσματα! Η λίστα δεν αλλάζει κατά τη διάρκεια εκτέλεσης:
+
+```java
+public class FormatCache {
+    private static List<FileType> cachedFormats = null;
+    
+    public static List<FileType> getSupportedFormats() {
+        if (cachedFormats == null) {
+            cachedFormats = FileType.getSupportedFileTypes();
+        }
+        return cachedFormats;
+    }
+}
+```
+
+Αυτό το μοτίβο εξασφαλίζει ότι ερωτάτε τη βιβλιοθήκη μόνο μία φορά ανά κύκλο ζωής της εφαρμογής.
+
+### Πρόβλημα 4: Περιορισμοί Σχετικοί με Άδεια
+
+**Σύμπτωμα:** Λαμβάνετε προειδοποιήσεις αξιολόγησης ή περιορισμένη υποστήριξη μορφών.
+
+**Λύση:** 
+- Εφαρμόστε την άδειά σας πριν καλέσετε οποιαδήποτε μέθοδο του GroupDocs
+- Επαληθεύστε ότι το μονοπάτι του αρχείου άδειας είναι σωστό
+- Ελέγξτε την ημερομηνία λήξης αν χρησιμοποιείτε άδεια περιορισμένου χρόνου
+
+```java
+try {
+    License license = new License();
+    license.setLicense("path/to/GroupDocs.Signature.lic");
+} catch (Exception e) {
+    System.err.println("License error: " + e.getMessage());
+}
+```
+
+## Καλές Πρακτικές για Ανίχνευση Μορφών Αρχείων
+
+Ακολουθήστε αυτές τις οδηγίες για να δημιουργήσετε αξιόπιστη, συντηρήσιμη ανίχνευση μορφών στις εφαρμογές σας.
+
+### 1. Επικύρωση Νωρίς, Αποτυχία Γρήγορα
+
+Ελέγχετε τις μορφές όσο το δυνατόν νωρίτερα στην αλυσίδα επεξεργασίας:
+
+```java
+public boolean validateFileFormat(String filePath) {
+    String extension = getFileExtension(filePath);
+    List<FileType> supported = FormatCache.getSupportedFormats();
+    
+    boolean isSupported = supported.stream()
+        .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(extension));
+    
+    if (!isSupported) {
+        throw new UnsupportedFormatException(
+            "File format " + extension + " is not supported"
+        );
+    }
+    return true;
+}
+```
+
+Αυτό αποτρέπει την άσκοπη επεξεργασία μη υποστηριζόμενων τύπων.
+
+### 2. Παρέχετε Σαφή Ανατροφοδότηση στον Χρήστη
+
+Όταν απορρίπτετε αρχεία, ενημερώστε τους ακριβώς ποιες μορφές υποστηρίζονται:
+
+```java
+public String getSupportedFormatsMessage() {
+    List<FileType> formats = FormatCache.getSupportedFormats();
+    String extensions = formats.stream()
+        .map(FileType::getExtension)
+        .collect(Collectors.joining(", "));
+    
+    return "Supported formats: " + extensions;
+}
+```
+
+### 3. Μην Εμπιστεύεστε Μόνο τις Επεκτάσεις
+
+Ένα αρχείο που μετονομάστηκε από `.exe` σε `.pdf` θα έχει επέκταση `.pdf` αλλά δεν θα είναι έγκυρο PDF. Το GroupDocs.Signature επικυρώνει το πραγματικό περιεχόμενο· όμως μπορείτε να συνδυάσετε προσεγγίσεις:
+
+```java
+// First check extension (fast)
+if (!hasValidExtension(file)) {
+    return false;
+}
+
+// Then validate with library (more thorough)
+try (Signature signature = new Signature(file)) {
+    // If initialization succeeds, format is valid
+    return true;
+} catch (Exception e) {
+    return false;
+}
+```
+
+### 4. Διαχειριστείτε τις Εξαιρέσεις με Ευγένεια
+
+Η επικύρωση αρχείων μπορεί να αποτύχει για πολλούς λόγους πέρα από μη υποστηριζόμενες μορφές:
+
+```java
+public ValidationResult validateDocument(String path) {
+    try {
+        // Your validation logic
+        return ValidationResult.success();
+    } catch (UnsupportedFormatException e) {
+        return ValidationResult.failure("Unsupported format: " + e.getMessage());
+    } catch (IOException e) {
+        return ValidationResult.failure("File access error: " + e.getMessage());
+    } catch (Exception e) {
+        return ValidationResult.failure("Unexpected error: " + e.getMessage());
+    }
+}
+```
+
+### 5. Παρακολουθείτε Αλλαγές Υποστήριξης Μορφών
+
+Κατά την αναβάθμιση της βιβλιοθήκης GroupDocs.Signature, ελέγξτε τις σημειώσεις κυκλοφορίας για:
+- Νέες υποστηριζόμενες μορφές
+- Καταργημένες μορφές
+- Αλλαγές στη συμπεριφορά ανίχνευσης
+
+Σκεφτείτε να προσθέσετε unit tests που επαληθεύουν ότι οι αναμενόμενες μορφές είναι διαθέσιμες:
+
+```java
+@Test
+public void testEssentialFormatsSupported() {
+    List<String> required = Arrays.asList(".pdf", ".docx", ".xlsx");
+    List<FileType> supported = FileType.getSupportedFileTypes();
+    
+    for (String format : required) {
+        assertTrue(
+            supported.stream().anyMatch(ft -> ft.getExtension().equals(format)),
+            format + " should be supported"
+        );
+    }
+}
+```
+
+## Σκέψεις Απόδοσης
+
+Η βελτιστοποίηση της ανίχνευσης μορφών μπορεί να φαίνεται μικρή, αλλά έχει σημασία όταν επεξεργάζεστε χιλιάδες έγγραφα ή χειρίζεστε ταυτόχρονες ανεβάσεις.
+
+### Διαχείριση Μνήμης
+
+**Στρατηγική caching:** Όπως αναφέρθηκε, cache τη λίστα υποστηριζόμενων μορών:
+
+```java
+// Good: Load once, reuse many times
+private static final List<FileType> SUPPORTED_FORMATS = 
+    FileType.getSupportedFileTypes();
+
+// Bad: Loads list every time method is called
+public boolean isSupported(String ext) {
+    return FileType.getSupportedFileTypes().stream()
+        .anyMatch(ft -> ft.getExtension().equals(ext));
+}
+```
+
+**Γιατί είναι σημαντικό:** Η φόρτωση της λίστας μορφών περιλαμβάνει reflection και εσωτερική αρχικοποίηση της βιβλιοθήκης. Η εκτέλεση μιας φοράς εξοικονομεί CPU cycles και κατανομές μνήμης.
+
+### Οδηγίες Χρήσης Πόρων
+
+**Για σενάρια υψηλού όγκου:**
+- Χρησιμοποιήστε thread‑safe cache για τις λίστες μορφών (το παραπάνω παράδειγμα είναι αμετάβλητο, άρα ασφαλές)
+- Σκεφτείτε lazy initialization αν η εφαρμογή σας δεν χρειάζεται πάντα ανίχνευση μορφών
+- Κατά την επεξεργασία εγγράφων, κλείνετε άμεσα τα αντικείμενα `Signature` για απελευθέρωση πόρων
+
+```java
+try (Signature signature = new Signature(filePath)) {
+    // Process document
+} // Automatically closed, resources freed
+```
+
+### Βελτιστοποίηση Παρτίδας Επεξεργασίας
+
+Αν επικυρώνετε πολλά αρχεία, σκεφτείτε παραλληλοποίηση:
+
+```java
+List<String> files = Arrays.asList("doc1.pdf", "doc2.docx", "doc3.xlsx");
+
+// Process in parallel
+files.parallelStream()
+    .forEach(file -> {
+        if (validateFileFormat(file)) {
+            processDocument(file);
+        }
+    });
+```
+
+**Προσοχή:** Μην υπερ‑παραλληλοποιήσετε. Αν η εργασία είναι I/O‑bound (ανάγνωση από δίσκο), οι επιπλέον νήματα δεν βοηθούν. Δοκιμάστε για να βρείτε το βέλτιστο αριθμό νημάτων.
+
+### Συμβουλές Tuning JVM
+
+Για εφαρμογές με βαριά επεξεργασία εγγράφων:
+- Αυξήστε το μέγεθος heap: `-Xmx2g` (προσαρμόστε ανάλογα)
+- Παρακολουθήστε το garbage collection: `-XX:+PrintGCDetails` για εντοπισμό προβλημάτων
+- Σκεφτείτε G1GC για μικρότερες παύσεις: `-XX:+UseG1GC`
+
+## Πρακτικές Εφαρμογές και Ενσωμάτωση
+
+Ας δούμε πραγματικά σενάρια όπου η ανίχνευση μορφών είναι κρίσιμη.
+
+### 1. Συστήματα Διαχείρισης Εγγράφων
+
+**Σενάριο:** Οι χρήστες ανεβάζουν έγγραφα που πρέπει να ευρετηριαστούν, επεξεργαστούν και αποθηκευτούν.
+
+**Μοτίβο υλοποίησης:**
+```java
+public class DocumentUploadHandler {
+    public void handleUpload(MultipartFile file) {
+        // Validate format first
+        if (!isFormatSupported(file.getOriginalFilename())) {
+            throw new InvalidFormatException(
+                "Please upload: " + getSupportedFormatsString()
+            );
+        }
+        
+        // Process valid document
+        processAndStore(file);
+    }
+    
+    private boolean isFormatSupported(String filename) {
+        String ext = getExtension(filename);
+        return FormatCache.getSupportedFormats().stream()
+            .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(ext));
+    }
+}
+```
+
+### 2. Ενσωμάτωση Cloud Storage
+
+**Σενάριο:** Συγχρονισμός εγγράφων από AWS S3 ή Google Drive και επεξεργασία μόνο των υποστηριζόμενων μορών.
+
+**Γιατί είναι χρήσιμο:** Αποφεύγετε το κατέβασμα και την προσπάθεια επεξεργασίας αρχείων που δεν υποστηρίζονται, εξοικονομώντας εύρος ζώνης και χρόνο.
+
+```java
+public void syncFromS3(String bucketName) {
+    S3Client s3 = S3Client.create();
+    ListObjectsV2Request listReq = ListObjectsV2Request.builder()
+        .bucket(bucketName)
+        .build();
+    
+    ListObjectsV2Response listing = s3.listObjectsV2(listReq);
+    
+    for (S3Object object : listing.contents()) {
+        if (isFormatSupported(object.key())) {
+            // Download and process only supported formats
+            downloadAndProcess(bucketName, object.key());
+        } else {
+            logger.info("Skipping unsupported format: " + object.key());
+        }
+    }
+}
+```
+
+### 3. Αυτοματοποίηση Επιχειρησιακών Ροών Εργασίας
+
+**Σενάριο:** Δρομολόγηση εγγράφων σε διαφορετικές γραμμές επεξεργασίας βάσει τύπου.
+
+**Παράδειγμα:** PDFs πηγαίνουν σε ροή υπογραφής, λογιστικά φύλλα σε εξαγωγή δεδομένων, εικόνες σε OCR.
+
+```java
+public void routeDocument(String filePath) {
+    try (Signature signature = new Signature(filePath)) {
+        FileType type = signature.getDocumentInfo().getFileType();
+        
+        switch (type.getExtension()) {
+            case ".pdf":
+            case ".docx":
+                sendToSignatureWorkflow(filePath);
+                break;
+            case ".xlsx":
+            case ".csv":
+                sendToDataExtractionWorkflow(filePath);
+                break;
+            case ".jpg":
+            case ".png":
+                sendToOCRWorkflow(filePath);
+                break;
+            default:
+                logger.warn("No workflow defined for: " + type.getExtension());
+        }
+    }
+}
+```
+
+### 4. Δημιουργία Επιλογέων Τύπων Αρχείων
+
+**Σενάριο:** Δημιουργία UI components με δυναμική υποστήριξη μορφών.
+
+**Παράδειγμα ενσωμάτωσης frontend:**
+```java
+@RestController
+public class FormatController {
+    @GetMapping("/api/supported-formats")
+    public ResponseEntity<List<String>> getSupportedFormats() {
+        List<String> extensions = FileType.getSupportedFileTypes().stream()
+            .map(FileType::getExtension)
+            .sorted()
+            .collect(Collectors.toList());
+        
+        return ResponseEntity.ok(extensions);
+    }
+}
+```
+
+Το frontend σας μπορεί στη συνέχεια να χρησιμοποιήσει αυτό για να ρυθμίσει τα components ανεβάσματος:
+```javascript
+// Frontend code (for context, not part of Java implementation)
+fetch('/api/supported-formats')
+    .then(res => res.json())
+    .then(formats => {
+        fileInput.accept = formats.join(',');
+    });
+```
+
+## Πώς να ελέγξετε την επέκταση αρχείου java;
+
+Φορτώστε το όνομα του αρχείου, εξάγετε το επίθημα και συγκρίνετε το με τη cached λίστα που επιστρέφει `Signature.getSupportedFileTypes()`. Αυτή η διπλή προσέγγιση εγγυάται ότι ελέγχετε έναν ενημερωμένο κατάλογο αντί για σκληροκωδικοποιημένο array, και αποτρέπει τις πλαστογραφημένες επεκτάσεις επειδή το GroupDocs.Signature επικυρώνει την κεφαλίδα του αρχείου πριν από οποιαδήποτε περαιτέρω επεξεργασία.
+
+## Τι είναι το GroupDocs.Signature;
+
+Το GroupDocs.Signature είναι μια βιβλιοθήκη Java που επιτρέπει στους προγραμματιστές να προσθέτουν, να επαληθεύουν και να διαχειρίζονται ψηφιακές υπογραφές σε πάνω από 50 μορφές εγγράφων. Παρέχει ενιαίο API για PDF, Office, εικόνες και πολλούς άλλους τύπους, διαχειριζόμενο σύνθετα σενάρια επικύρωσης όπως κρυπτογραφημένα αρχεία, έγγραφα με κωδικό πρόσβασης και υπογραφές πολλαπλών σελίδων.
+
+## Γιατί να χρησιμοποιήσετε ανίχνευση με βάση τη βιβλιοθήκη αντί για ενσωματωμένες μεθόδους Java;
+
+Η ανίχνευση με βάση τη βιβλιοθήκη εξετάζει την πραγματική κεφαλίδα του αρχείου και την εσωτερική του δομή, διασφαλίζοντας ότι το περιεχόμενο ταιριάζει πραγματικά με τη δηλωμένη μορφή. Οι ενσωματωμένες μεθόδους όπως `Files.probeContentType` ή οι απλοί έλεγχοι επιθήματος μπορούν να εξαπατηθούν με μετονομασία κακόβουλων εκτελέσιμων σε `.pdf`. Το GroupDocs.Signature εξαλείφει αυτόν τον κίνδυνο εκτελώντας βαθιά ανάλυση περιεχομένου πριν από οποιαδήποτε περαιτέρω επεξεργασία.
+
+## Πότε πρέπει να κάνω caching της λίστας υποστηριζόμενων μορφών αρχείων;
+
+Cache τη λίστα μορφών κατά την εκκίνηση της εφαρμογής ή την πρώτη φορά που τη χρειάζεστε, και επαναχρησιμοποιήστε τη αμετάβλητη συλλογή για όλη τη διάρκεια του JVM. Το caching είναι ιδιαίτερα ωφέλιμο σε web services υψηλού throughput όπου κάθε αίτημα διαφορετικά θα προκαλούσε βαρύ reflection initialization, προσθέτοντας χιλιοστά του δευτερολέπτου καθυστέρηση ανά κλήση.
+
+## Πώς να διαχειριστείτε μη υποστηριζόμενες μορφές αρχείων σε Java;
+
+Εντοπίστε τη μη υποστηριζόμενη μορφή νωρίς, καταγράψτε την προσπάθεια για λόγους ελέγχου, και επιστρέψτε ένα σαφές μήνυμα σφάλματος στον χρήστη που να παραθέτει τις επιτρεπόμενες επεκτάσεις. Αυτή η προσέγγιση βελτιώνει την εμπειρία χρήστη και μειώνει το περιττό φορτίο επεξεργασίας στο backend σας.
+
+## Συχνές Ερωτήσεις
+
+**Ε: Πώς ενημερώνω την έκδοση της βιβλιοθήκης GroupDocs.Signature στο Maven;**  
+Α: Αλλάξτε το `<version>` στο `pom.xml` στην επιθυμητή έκδοση, στη συνέχεια τρέξτε `mvn clean install`. Πάντα ελέγχετε τις [σημειώσεις κυκλοφορίας](https://releases.groupdocs.com/signature/java/) για αλλαγές που μπορεί να σπάσουν την συμβατότητα.
+
+**Ε: Μπορεί το GroupDocs.Signature να ανιχνεύσει μορφές αρχείων ακόμα και αν η επέκταση είναι λανθασμένη;**  
+Α: Ναι. Η βιβλιοθήκη εκτελεί επικύρωση βάσει περιεχομένου, έτσι ένα αρχείο που μετονομάστηκε από `.exe` σε `.pdf` θα απορριφθεί ως μη έγκυρο PDF κατά την επεξεργασία. Η `getSupportedFileTypes()` εμφανίζει μόνο τις μορφές που η βιβλιοθήκη μπορεί να χειριστεί· πρέπει όμως να προσπαθήσετε να ανοίξετε το αρχείο για να επαληθεύσετε τον πραγματικό τύπο.
+
+**Ε: Ποια είναι η διαφορά μεταξύ δωρεάν δοκιμής και προσωρινής άδειας;**  
+Α: Η δωρεάν δοκιμή δίνει άμεση πρόσβαση αλλά περιλαμβάνει υδατογραφήματα αξιολόγησης και περιορισμούς σε ορισμένες λειτουργίες. Η προσωρινή άδεια παρέχει πλήρη πρόσβαση για 30 ημέρες χωρίς υδατογραφήματα, ιδανική για εκτενή δοκιμή σε περιβάλλον που προσομοιώνει παραγωγή.
+
+**Ε: Πώς πρέπει να χειριστώ μη υποστηριζόμενες μορφές αρχείων στην εφαρμογή μου;**  
+Α: Επιστρέψτε ένα σύντομο σφάλμα όπως “Μη υποστηριζόμενη μορφή. Οι υποστηριζόμενες επεκτάσεις είναι: .pdf, .docx, .xlsx, .png, .jpg.” Καταγράψτε το περιστατικό για παρακολούθηση ασφαλείας και σκεφτείτε να προσθέσετε tooltip UI που να παραθέτει τους επιτρεπόμενους τύπους.
+
+**Ε: Λειτουργεί το GroupDocs.Signature με κρυπτογραφημένα ή προστατευμένα με κωδικό αρχεία;**  
+Α: Ναι, αλλά πρέπει να παρέχετε τον κωδικό όταν δημιουργείτε το αντικείμενο `Signature`. Η ανίχνευση μορφής δεν απαιτεί τον κωδικό, αλλά οποιαδήποτε επόμενη επεξεργασία (π.χ. προσθήκη υπογραφής) θα το χρειαστεί.
+
+**Ε: Υπάρχει κοινότητα ή φόρουμ υποστήριξης για το GroupDocs.Signature;**  
+Α: Φυσικά! Επισκεφθείτε το [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) για συζητήσεις, παραδείγματα κώδικα και απαντήσεις από την ομάδα του GroupDocs.
 
 ## Πόροι
-- **Απόδειξη με έγγραφα**: Εξερευνήστε την λεπτομερή τεκμηρίωση στη διεύθυνση [Τεκμηρίωση GroupDocs](https://docs.groupdocs.com/signature/java/)
-- **Αναφορά API**: Πρόσβαση σε αναλυτικές λεπτομέρειες API στη διεύθυνση [Αναφορά API GroupDocs](https://reference.groupdocs.com/signature/java/)
-- **Λήψη βιβλιοθήκης**: Αποκτήστε την τελευταία έκδοση από [Εκδόσεις GroupDocs](https://releases.groupdocs.com/signature/java/)
-- **Αγορά και Άδεια Χρήσης**: Επισκεφθείτε το [σελίδα αγοράς](https://purchase.groupdocs.com/buy) για επιλογές αδειοδότησης.
-- **Δωρεάν δοκιμή**Δοκιμάστε τις λειτουργίες κατεβάζοντας μια δωρεάν δοκιμαστική έκδοση από τη διεύθυνση [Δωρεάν δοκιμή GroupDocs](https://release)
+
+**Τεκμηρίωση:**
+- [GroupDocs.Signature for Java Documentation](https://docs.groupdocs.com/signature/java/) – Αναλυτικοί οδηγοί και tutorials
+- [API Reference](https://reference.groupdocs.com/signature/java/) – Πλήρης τεκμηρίωση API με όλες τις κλάσεις και μεθόδους
+
+**Λήψεις και Αδειοδότηση:**
+- [Download Library](https://releases.groupdocs.com/signature/java/) – Τελευταίες εκδόσεις και ιστορικό
+- [Purchase Licenses](https://purchase.groupdocs.com/buy) – Τιμολόγηση και επιλογές αδειοδότησης
+- [Free Trial](https://releases.groupdocs.com/signature/java/) – Ξεκινήστε τη δοκιμή αμέσως
+
+**Υποστήριξη και Κοινότητα:**
+- [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) – Συζητήσεις, υποστήριξη και παραδείγματα
+
+---
+
+**Τελευταία Ενημέρωση:** 2026-05-11  
+**Δοκιμασμένο Με:** GroupDocs.Signature 23.12 for Java  
+**Συγγραφέας:** GroupDocs
+
+```xml
+<version>24.1</version>  <!-- Update to newer version -->
+```
+
+```java
+try {
+    validateAndProcess(file);
+} catch (UnsupportedFormatException e) {
+    return ResponseEntity
+        .badRequest()
+        .body("Unsupported format. Please upload: " + getSupportedFormatsString());
+}
+```
+
+```java
+LoadOptions loadOptions = new LoadOptions();
+loadOptions.setPassword("your-password");
+Signature signature = new Signature("protected.pdf", loadOptions);
+```
+
+## Σχετικά Tutorials
+
+- [Add QR Code to PDF Java - Complete Guide with GroupDocs.Signature](/signature/java/qr-code-signatures/qr-code-signatures-java-groupdocs/)
+- [Java Text Signature Search - A Complete Guide to Document Verification with GroupDocs.Signature](/signature/java/search-verification/java-text-signature-search-groupdocs-signature/)
+- [Digital Signature in Java - Complete Guide to Certificate Loading and Document Signing](/signature/java/digital-signatures/digital-signature-loading-signing-groupdocs-java/)
