@@ -1,45 +1,112 @@
 ---
-"date": "2025-05-08"
-"description": "เรียนรู้วิธีใช้ GroupDocs.Signature สำหรับ Java เพื่อจัดการและรองรับไฟล์หลากหลายรูปแบบอย่างมีประสิทธิภาพ ยกระดับระบบการจัดการเอกสารของคุณด้วยคู่มือทีละขั้นตอนนี้"
-"title": "การสนับสนุนรูปแบบไฟล์หลักใน GroupDocs.Signature สำหรับ Java คู่มือฉบับสมบูรณ์"
-"url": "/th/java/advanced-options/groupdocs-signature-java-file-format-support/"
-"weight": 1
+categories:
+- Java Document Processing
+date: '2026-05-11'
+description: Learn how to check file extension java and validate document formats
+  using GroupDocs.Signature. Complete guide with code examples, troubleshooting tips,
+  and best practices for document type checking.
+keywords:
+- check file extension java
+- validate document type java
+- java upload file validation
+- how to detect file format java
+lastmod: '2025-01-02'
+linktitle: Java File Format Detection Guide
+schemas:
+- author: GroupDocs
+  dateModified: '2026-05-11'
+  description: Learn how to check file extension java and validate document formats
+    using GroupDocs.Signature. Complete guide with code examples, troubleshooting
+    tips, and best practices for document type checking.
+  headline: Java File Format Detection - Validate and Check Document Types
+  type: TechArticle
+- questions:
+  - answer: Change the `<version>` tag in your `pom.xml` to the desired version, then
+      run `mvn clean install`. Always review the [release notes](https://releases.groupdocs.com/signature/java/)
+      for breaking changes.
+    question: How do I update my GroupDocs.Signature library version in Maven?
+  - answer: Yes. The library performs content‑based validation, so a file renamed
+      from `.exe` to `.pdf` will be rejected as not a valid PDF during processing.
+      `getSupportedFileTypes()` only lists formats the library can handle; you still
+      need to attempt opening the file to verify its true type.
+    question: Can GroupDocs.Signature detect file formats even if the extension is
+      wrong?
+  - answer: The free trial gives immediate access but includes evaluation watermarks
+      and some feature limits. A temporary license provides full feature access for
+      30 days without watermarks, ideal for thorough testing in a production‑like
+      environment.
+    question: What's the difference between a free trial and temporary license?
+  - answer: 'Return a concise error like “Unsupported format. Supported extensions
+      are: .pdf, .docx, .xlsx, .png, .jpg.” Log the incident for security monitoring
+      and consider notifying the user with a UI tooltip that lists allowed types.'
+    question: How should I handle unsupported file formats in my application?
+  - answer: Yes, but you must supply the password when creating the `Signature` instance.
+      Format detection itself does not require the password, but any subsequent processing
+      (e.g., adding a signature) will.
+    question: Does GroupDocs.Signature work with encrypted or password‑protected files?
+  type: FAQPage
+tags:
+- file-validation
+- java-libraries
+- document-management
+- format-detection
+title: Java File Format Detection - Validate and Check Document Types
 type: docs
+url: /th/java/advanced-options/groupdocs-signature-java-file-format-support/
+weight: 1
 ---
-# การสนับสนุนรูปแบบไฟล์หลักใน GroupDocs.Signature สำหรับ Java: คู่มือที่ครอบคลุม
 
-## การแนะนำ
+# ตรวจสอบนามสกุลไฟล์ java – การตรวจจับรูปแบบไฟล์ Java: ตรวจสอบและเช็คประเภทเอกสาร
 
-การปรับปรุงระบบการจัดการเอกสารของคุณด้วยการรองรับไฟล์หลากหลายรูปแบบสามารถทำได้อย่างมีประสิทธิภาพด้วยไลบรารี GroupDocs.Signature สำหรับ Java บทช่วยสอนนี้จะให้คำแนะนำโดยละเอียดเกี่ยวกับวิธีการใช้เครื่องมืออันทรงพลังนี้ ซึ่งช่วยให้สามารถผสานรวมได้อย่างราบรื่นและมีฟังก์ชันการทำงานที่แข็งแกร่งภายในแอปพลิเคชันของคุณ
+หนึ่งในงานที่พบบ่อยที่สุดคือการ **ตรวจสอบนามสกุลไฟล์ java** ก่อนประมวลผลเอกสาร  
 
-### สิ่งที่คุณจะได้เรียนรู้:
-- การนำ GroupDocs.Signature มาใช้กับ Java เพื่อรับรูปแบบไฟล์ที่รองรับ
-- การตั้งค่าการอ้างอิงและการกำหนดค่าสภาพแวดล้อมของคุณ
-- การสำรวจการใช้งานจริงและความเป็นไปได้ในการบูรณาการกับระบบอื่น
-- การประยุกต์ใช้เทคนิคการเพิ่มประสิทธิภาพการทำงานที่เฉพาะเจาะจงกับห้องสมุด
+เคยอัปโหลดไฟล์แล้วแอปพลิเคชันพังเพราะรูปแบบไม่ตรงตามที่คาดไว้หรือไม่? คุณไม่ได้เป็นคนเดียว การตรวจจับและตรวจสอบรูปแบบไฟล์ใน Java มีความสำคัญต่อการสร้างแอปพลิเคชันการประมวลผลเอกสารที่แข็งแรง—but มันยากกว่าการตรวจสอบนามสกุลไฟล์ (ซึ่งสามารถปลอมแปลงหรือผิดพลาดได้ง่าย)
 
-เริ่มต้นการเดินทางนี้เพื่อให้มั่นใจว่าระบบของคุณสามารถจัดการเอกสารหลากหลายประเภทได้อย่างง่ายดาย ก่อนที่เราจะเจาะลึก โปรดตรวจสอบให้แน่ใจว่าคุณได้เตรียมสิ่งที่จำเป็นทั้งหมดไว้พร้อมสำหรับการตั้งค่าที่ราบรื่น
+ในคู่มือนี้ คุณจะได้เรียนรู้วิธีตรวจจับรูปแบบไฟล์ใน Java อย่างเชื่อถือได้ด้วย GroupDocs.Signature ไลบรารีที่ทรงพลังซึ่งทำได้มากกว่าการตรวจสอบนามสกุลไฟล์แบบง่าย ไม่ว่าคุณจะสร้างระบบจัดการเอกสาร, ตรวจสอบการอัปโหลดของผู้ใช้, หรือรวมกับบริการจัดเก็บคลาวด์ คุณจะพบเทคนิคปฏิบัติที่ช่วยจัดการกับประเภทเอกสารหลากหลายได้อย่างมั่นใจ
+
+**สิ่งที่คุณจะได้เรียนรู้:**  
+- วิธีดึงรูปแบบไฟล์ที่รองรับใน Java อย่างโปรแกรมเมติก  
+- เมื่อใดควรใช้การตรวจจับแบบไลบรารีเทียบกับวิธีในตัวของ Java  
+- จุดบกพร่องทั่วไปเมื่อทำการตรวจสอบประเภทไฟล์ (และวิธีหลีกเลี่ยง)  
+- สถานการณ์การบูรณาการในโลกจริงและเคล็ดลับการเพิ่มประสิทธิภาพ  
+- กลยุทธ์การแก้ไขปัญหาการตรวจจับรูปแบบไฟล์  
+
+เมื่อคุณอ่านจบแล้ว คุณจะมีการทำงานที่พร้อมใช้งานซึ่งสามารถนำไปใส่ในแอปพลิเคชัน Java ของคุณได้ทันที เริ่มต้นกันเลยโดยตรวจสอบว่าคุณมีทุกอย่างที่ต้องการแล้ว
+
+## คำตอบอย่างรวดเร็ว
+- **วิธีที่เร็วที่สุดในการตรวจสอบนามสกุลไฟล์ java คืออะไร?** ใช้ `Signature.getSupportedFileTypes()` เพื่อดึงรายการทั้งหมดและเปรียบเทียบนามสกุลของไฟล์กับรายการนั้น  
+- **ฉันต้องมีใบอนุญาตเพื่อใช้ GroupDocs.Signature หรือไม่?** เวอร์ชันทดลองฟรีใช้ได้สำหรับการพัฒนา; ใบอนุญาตถาวรจะลบข้อจำกัดการประเมินทั้งหมด  
+- **ฉันสามารถตรวจสอบการอัปโหลดโดยไม่ต้องอ่านไฟล์ทั้งหมดได้หรือไม่?** ได้—GroupDocs.Signature ตรวจสอบส่วนหัวของไฟล์ซึ่งมีค่าใช้จ่ายน้อยกว่าการโหลดเอกสารทั้งหมดมาก  
+- **GroupDocs.Signature รองรับรูปแบบไฟล์กี่แบบ?** มากกว่า 50 รูปแบบเข้าและออก รวมถึง PDF, DOCX, XLSX, PPTX, JPG, PNG และอื่น ๆ อีกมากมาย  
+- **การแคชรายการรูปแบบไฟล์จำเป็นหรือไม่?** การแคชช่วยกำจัดค่าโอเวอร์เฮดจากการรีเฟล็กชันซ้ำและเพิ่มอัตราการทำงานสำหรับบริการที่มีปริมาณสูง  
 
 ## ข้อกำหนดเบื้องต้น
 
-ก่อนที่จะนำ GroupDocs.Signature ไปใช้กับ Java ควรเตรียมข้อกำหนดดังต่อไปนี้:
+ก่อนจะลงลึกในเรื่องการตรวจจับรูปแบบไฟล์ ให้แน่ใจว่าคุณเตรียมสิ่งต่อไปนี้เรียบร้อยแล้ว:
 
-### ไลบรารีและเวอร์ชันที่จำเป็น:
-- **ไลบรารี GroupDocs.Signature**:ขอแนะนำเวอร์ชัน 23.12 ขึ้นไป
-- ตรวจสอบให้แน่ใจว่าสภาพแวดล้อมการพัฒนาของคุณรองรับ Java (JDK 1.8+)
+### ไลบรารีและเวอร์ชันที่ต้องการ
+- **GroupDocs.Signature Library**: เวอร์ชัน 23.12 หรือใหม่กว่า (เราจะใช้เวอร์ชันล่าสุดที่เสถียร)  
+- **Java Development Kit**: JDK 1.8 หรือสูงกว่า (แนะนำ JDK 11+ เพื่อประสิทธิภาพที่ดีกว่า)  
+- **Build Tool**: Maven 3.x หรือ Gradle 6.x สำหรับการจัดการ dependency  
 
-### ข้อกำหนดการตั้งค่าสภาพแวดล้อม:
-- ความเข้าใจพื้นฐานเกี่ยวกับ Maven หรือ Gradle สำหรับการจัดการการอ้างอิง
-- ความคุ้นเคยกับแนวคิดหลักของการเขียนโปรแกรม Java
+### ข้อกำหนดการตั้งค่าสภาพแวดล้อม
+คุณควรคุ้นเคยกับ:  
+- แนวคิดพื้นฐานของ Java (คลาส, ลูป, import)  
+- การใช้ Maven หรือ Gradle เพื่อจัดการ dependency  
+- การรันแอปพลิเคชัน Java จาก IDE หรือ command line  
 
-เมื่อมีข้อกำหนดเบื้องต้นเหล่านี้แล้ว มาดำเนินการตั้งค่า GroupDocs.Signature สำหรับ Java ในโครงการของคุณกันเลย
+**เคล็ดลับด่วน:** หากคุณทำงานกับเอกสารขนาดใหญ่หรือวางแผนประมวลผลไฟล์พร้อมกันหลายไฟล์ ให้จัดสรรหน่วยความจำ heap ให้ JVM เพียงพอ (เราจะพูดถึงการปรับจูนต่อไป)
+
+เมื่อสภาพแวดล้อมพร้อมแล้ว ไปตั้งค่า GroupDocs.Signature ในโปรเจกต์ของคุณกันต่อ
 
 ## การตั้งค่า GroupDocs.Signature สำหรับ Java
 
-การตั้งค่าไลบรารี GroupDocs.Signature ทำได้ง่าย ๆ ด้วยโปรแกรมจัดการแพ็กเกจ เช่น Maven หรือ Gradle ทำตามขั้นตอนเหล่านี้:
+การนำ GroupDocs.Signature เข้ามาในโปรเจกต์ของคุณทำได้ง่าย—เลือกเครื่องมือสร้างที่คุณชอบและทำตามขั้นตอนต่อไปนี้
 
-### การใช้ Maven:
-เพิ่มการอ้างอิงนี้ให้กับของคุณ `pom.xml` ไฟล์:
+### การใช้ Maven
+
+เพิ่ม dependency นี้ลงในไฟล์ `pom.xml` ของคุณ:
+
 ```xml
 <dependency>
     <groupId>com.groupdocs</groupId>
@@ -47,106 +114,578 @@ type: docs
     <version>23.12</version>
 </dependency>
 ```
-### การใช้ Gradle:
-รวมบรรทัดนี้ไว้ในของคุณ `build.gradle` ไฟล์:
+
+เพิ่ม dependency แล้วรัน `mvn clean install` เพื่อดาวน์โหลดไลบรารี
+
+### การใช้ Gradle
+
+ใส่บรรทัดนี้ในไฟล์ `build.gradle` ของคุณ:
+
 ```gradle
 implementation 'com.groupdocs:groupdocs-signature:23.12'
 ```
-### ดาวน์โหลดโดยตรง:
-หรือดาวน์โหลดเวอร์ชันล่าสุดได้จาก [GroupDocs.Signature สำหรับรุ่น Java](https://releases-groupdocs.com/signature/java/).
 
-#### ขั้นตอนการรับใบอนุญาต:
-- **ทดลองใช้ฟรี**: พร้อมสำหรับการทดสอบฟังก์ชันการทำงาน
-- **ใบอนุญาตชั่วคราว**:ขอใบอนุญาตชั่วคราวเพื่อการเข้าถึงแบบไม่มีข้อจำกัดในระหว่างการประเมินผล
-- **ซื้อ**:ซื้อใบอนุญาตถาวรจาก [หน้าการซื้อ GroupDocs](https://purchase.groupdocs.com/buy) หากพอใจกับการทดลองใช้
+จากนั้น sync โปรเจกต์ Gradle หรือรัน `gradle build`
 
-### การเริ่มต้นและการตั้งค่าขั้นพื้นฐาน
-เริ่มต้น GroupDocs.Signature ในแอปพลิเคชัน Java ของคุณดังต่อไปนี้:
+### ตัวเลือกการดาวน์โหลดโดยตรง
+
+ไม่ใช้เครื่องมือสร้าง? คุณสามารถดาวน์โหลด JAR ได้โดยตรงจาก [GroupDocs.Signature for Java releases](https://releases.groupdocs.com/signature/java/) แล้วเพิ่มลงใน classpath ด้วยตนเอง (แต่จริง ๆ แล้วการใช้ Maven หรือ Gradle จะช่วยลดปัญหาในระยะยาว)
+
+### ขั้นตอนการรับใบอนุญาต
+
+GroupDocs.Signature มีตัวเลือกใบอนุญาตที่ยืดหยุ่น:  
+
+- **Free Trial**: เหมาะสำหรับการทดสอบ—เริ่มได้ทันทีโดยไม่ต้องใช้บัตรเครดิต ([ไม่มีบัตรเครดิตจำเป็น](https://releases.groupdocs.com/signature/java/))  
+- **Temporary License**: ต้องการเวลาประเมินเพิ่ม? ขอใบอนุญาตชั่วคราว 30 วันเพื่อเข้าถึงไม่จำกัด  
+- **Purchase**: เมื่อพร้อมใช้งานจริง ให้ซื้อใบอนุญาตถาวรจาก [GroupDocs Purchase Page](https://purchase.groupdocs.com/buy)  
+
+**เคล็ดลับ:** เริ่มด้วยการทดลองฟรีเพื่อสำรวจฟีเจอร์ทั้งหมด ใบอนุญาตชั่วคราวจะลบลายน้ำและข้อจำกัดหากต้องการประเมินต่อเนื่อง
+
+### การเริ่มต้นและตั้งค่าพื้นฐาน
+
+`Signature` คือจุดเริ่มต้นหลักสำหรับทุกการทำงานใน GroupDocs.Signature มันจัดการการโหลดเอกสาร, การจัดการรูปแบบ, และการประมวลผลลายเซ็น  
+
+ตัวอย่างการเริ่มต้น GroupDocs.Signature ในแอปพลิเคชัน Java ของคุณ:
+
 ```java
 import com.groupdocs.signature.Signature;
-// สร้างอินสแตนซ์ของคลาส Signature
+
+// Create an instance of Signature class
 Signature signature = new Signature("sample.pdf");
 ```
-เมื่อการตั้งค่าเสร็จสมบูรณ์แล้ว เรามาดูวิธีการใช้งานฟีเจอร์นี้เพื่อรับรูปแบบไฟล์ที่รองรับกัน
 
-## คู่มือการใช้งาน
+โค้ดนี้สร้างอ็อบเจกต์ signature สำหรับเอกสารที่ระบุ คุณจะใช้รูปแบบนี้เมื่อทำงานกับเอกสารจริง แต่สำหรับการดึงรูปแบบที่รองรับ คุณไม่จำเป็นต้องมีไฟล์เฉพาะ (จะอธิบายในส่วนต่อไป)
 
-หัวข้อนี้จะแนะนำคุณเกี่ยวกับการใช้งานฟังก์ชันในการดึงและแสดงรายการรูปแบบไฟล์ที่รองรับโดยใช้ GroupDocs.Signature สำหรับ Java
+ตอนนี้การตั้งค่าเสร็จแล้ว ไปดำเนินการฟังก์ชันหลักเพื่อค้นหาและดึงรูปแบบไฟล์ที่รองรับกันเถอะ
 
-### ภาพรวม
-วัตถุประสงค์หลักคือการใช้ `FileType` ยูทิลิตี้ภายในไลบรารีเพื่อดึงไฟล์ทุกประเภทที่รองรับ ฟีเจอร์นี้ช่วยให้แอปพลิเคชันของคุณสามารถปรับให้เข้ากับเอกสารประเภทต่างๆ ได้อย่างยืดหยุ่น โดยไม่ต้องฮาร์ดโค้ดก่อน
+## คู่มือการทำงาน
 
-#### การดำเนินการแบบทีละขั้นตอน
-**1. นำเข้าคลาสที่จำเป็น**
-เริ่มต้นด้วยการนำเข้าคลาสที่จำเป็นจาก GroupDocs.Signature:
+นี่คือส่วนที่ทำให้เรื่องเป็นรูปธรรม เราจะสร้างยูทิลิตี้ง่าย ๆ ที่ดึงรูปแบบไฟล์ที่รองรับทั้งหมด—เปรียบเสมือน “ตัวตรวจสอบความเข้ากันได้” สำหรับ pipeline การประมวลผลเอกสารของคุณ
+
+### ทำไมเรื่องนี้ถึงสำคัญ
+
+ก่อนที่คุณจะลงมือพัฒนาฟีเจอร์การประมวลผลเอกสาร คุณต้องรู้ว่าห้องสมุดของคุณรองรับประเภทไฟล์อะไร การทำเช่นนี้ให้ข้อมูลแบบไดนามิกหมายความว่า:  
+- ไม่ต้องกำหนดรายการนามสกุลไฟล์แบบคงที่ที่อาจล้าสมัย  
+- สามารถตรวจสอบการอัปโหลดของผู้ใช้โดยอิงกับรูปแบบที่รองรับจริง  
+- มีข้อมูลอ้างอิงเร็วสำหรับสร้างตัวกรองประเภทไฟล์ใน UI  
+
+### การดำเนินการแบบขั้นตอน
+
+**1. นำเข้าคลาสที่จำเป็น**  
+
+`FileType` คือประตูสู่การตรวจจับรูปแบบ—มันบรรจุข้อมูลเมตาเกี่ยวกับประเภทเอกสารที่รองรับ
+
 ```java
 import com.groupdocs.signature.domain.documentpreview.FileType;
 import java.util.List;
 ```
-**2. สร้างคลาสสำหรับฟังก์ชันการเรียกค้นข้อมูล**
-สร้างคลาสที่มีชื่อว่า `GetSupportedFileFormats` และรวมถึงฟังก์ชันหลักในการดึงข้อมูลประเภทไฟล์:
+
+คลาส `FileType` เป็นตัวบรรยายของ GroupDocs.Signature สำหรับแต่ละรูปแบบที่รองรับ โดยเปิดเผยคุณสมบัติเช่น extension, MIME type, และ description
+
+**2. สร้างคลาสสำหรับดึงข้อมูล**  
+
+นี่คือการทำงานเต็มรูปแบบ:
+
 ```java
 public class GetSupportedFileFormats {
     public static void run() {
-        // ดึงรายการประเภทไฟล์ที่รองรับจากยูทิลิตี้ FileType
+        // Retrieve a list of supported file types from the FileType utility.
         List<FileType> supportedFileTypes = FileType.getSupportedFileTypes();
 
-        // ทำซ้ำผ่านวัตถุ FileType แต่ละรายการและพิมพ์ส่วนขยายไปยังคอนโซล
+        // Iterate over each FileType object and print its extension to the console.
         for (FileType fileType : supportedFileTypes) {
             System.out.print("\n" + fileType.getExtension());
         }
     }
 }
 ```
-**คำอธิบาย:**
-- `getSupportedFileTypes()`: ดึงรูปแบบไฟล์ทั้งหมดที่ GroupDocs.Signature รองรับ โดยส่งคืนเป็นรายการ `FileType` วัตถุ.
-- ลูปนี้จะวนซ้ำผ่านรายการและส่งออกนามสกุลไฟล์แต่ละรายการ
 
-### ตัวเลือกการกำหนดค่าคีย์
-แม้ว่าคุณลักษณะนี้จะมีความตรงไปตรงมา แต่โปรดตรวจสอบให้แน่ใจว่าสภาพแวดล้อมของแอปพลิเคชันของคุณได้รับการกำหนดค่าอย่างถูกต้องเพื่อจัดการกับข้อยกเว้นที่อาจเกิดขึ้นหรือรายการขนาดใหญ่ของประเภทที่รองรับ
+**สิ่งที่กำลังเกิดขึ้นที่นี่:**  
+- `getSupportedFileTypes()`: เมธอดสแตติกนี้สอบถามรีจิสทรีภายในของไลบรารีและคืนรายการเต็มของรูปแบบที่รองรับเป็นอ็อบเจกต์ `FileType`  
+- ลูปจะวนผ่านแต่ละรูปแบบและพิมพ์นามสกุล (เช่น `.pdf`, `.docx`, `.xlsx`)  
+- แต่ละอ็อบเจกต์ `FileType` ยังมีเมตาเพิ่มเติมที่คุณสามารถเข้าถึงได้ (เราจะสำรวจต่อด้านล่าง)
 
-**เคล็ดลับการแก้ไขปัญหา:**
-- ตรวจสอบว่าการอ้างอิงทั้งหมดถูกรวมไว้ในการกำหนดค่าการสร้างโครงการของคุณอย่างถูกต้อง
-- ตรวจสอบการอัปเดตบนไลบรารี GroupDocs.Signature ที่อาจขยายการรองรับไปยังรูปแบบไฟล์เพิ่มเติม
+### นอกเหนือจากนามสกุลพื้นฐาน
 
-## การประยุกต์ใช้งานจริง
+อ็อบเจกต์ `FileType` ให้ข้อมูลมากกว่านามสกุล นี่คือตัวอย่างที่คุณสามารถดึงได้เพิ่มเติม:
 
-การทำความเข้าใจรูปแบบไฟล์ที่ได้รับการรองรับโดย GroupDocs.Signature จะช่วยเปิดการใช้งานจริงต่างๆ ได้:
-1. **ระบบจัดการเอกสาร**:ปรับกระบวนการจัดการเอกสารโดยอัตโนมัติตามรูปแบบที่มีอยู่
-2. **การบูรณาการกับบริการจัดเก็บข้อมูลบนคลาวด์**:รับรองความเข้ากันได้เมื่ออัพโหลดหรือดาวน์โหลดเอกสารจากบริการเช่น AWS S3 หรือ Google Drive
-3. **แอปพลิเคชันสำหรับองค์กร**:ปรับปรุงเวิร์กโฟลว์ทางธุรกิจโดยให้ผู้ใช้สามารถทำงานกับเอกสารประเภทต่างๆ ได้อย่างราบรื่น
+```java
+for (FileType fileType : supportedFileTypes) {
+    System.out.println("Extension: " + fileType.getExtension());
+    System.out.println("Format: " + fileType.getFileFormat());
+    // Additional properties available depending on version
+}
+```
 
-## การพิจารณาประสิทธิภาพ
-การเพิ่มประสิทธิภาพการทำงานของแอปพลิเคชันของคุณในขณะที่ใช้ GroupDocs.Signature เกี่ยวข้องกับกลยุทธ์หลายประการ:
-- **การจัดการหน่วยความจำที่มีประสิทธิภาพ**:จัดการหน่วยความจำ Java อย่างมีประสิทธิภาพ โดยเฉพาะเมื่อต้องจัดการกับเอกสารขนาดใหญ่
-- **แนวทางการใช้ทรัพยากร**:ตรวจสอบการใช้ทรัพยากรและเพิ่มประสิทธิภาพตามความต้องการเฉพาะของแอปพลิเคชันของคุณ
+ประโยชน์เมื่อคุณต้องการแสดงชื่อรูปแบบที่เป็นมิตรต่อผู้ใช้หรือจัดกลุ่มรูปแบบตามประเภท (เอกสาร vs สเปรดชีต vs รูปภาพ)
 
-การยึดมั่นตามแนวทางปฏิบัติที่ดีที่สุดเหล่านี้จะช่วยรักษาประสิทธิภาพที่เหมาะสมที่สุดในการใช้งานของคุณ
+## เมื่อควรใช้วิธีนี้
 
-## บทสรุป
-ในบทช่วยสอนนี้ เราได้ศึกษาวิธีการใช้ GroupDocs.Signature สำหรับ Java เพื่อดึงข้อมูลรูปแบบไฟล์ที่รองรับ ซึ่งจะช่วยเพิ่มประสิทธิภาพแอปพลิเคชันของคุณ เพียงทำตามขั้นตอนการใช้งานที่ระบุไว้ คุณก็จะสามารถผสานรวมฟีเจอร์นี้เข้ากับโปรเจกต์ของคุณได้อย่างราบรื่น
+ไม่ใช่ทุกสถานการณ์จะต้องใช้การตรวจจับแบบไลบรารี นี่คือกรณีที่ GroupDocs.Signature มีประโยชน์สูงสุด:
 
-### ขั้นตอนต่อไป:
-- ทดลองใช้ฟีเจอร์เพิ่มเติมที่นำเสนอโดย GroupDocs.Signature
-- สำรวจตัวเลือกการรวมเข้ากับบริการหรือแพลตฟอร์มอื่น
+### กรณีการใช้งานที่เหมาะสม
 
-พร้อมเริ่มใช้งานหรือยัง? ลองใช้เทคนิคเหล่านี้ แล้วดูว่าจะเป็นประโยชน์ต่อแอปพลิเคชัน Java ของคุณอย่างไร!
+**1. สร้างตัวตรวจสอบการอัปโหลดเอกสาร**  
+เมื่อผู้ใช้อัปโหลดไฟล์ คุณต้องตรวจสอบรูปแบบที่ฝั่งเซิร์ฟเวอร์ (อย่าเชื่อการตรวจสอบที่ฝั่งไคลเอนต์เพียงอย่างเดียว) วิธีนี้ช่วยให้คุณตรวจสอบกับรายการรูปแบบที่รองรับทั้งหมดก่อนดำเนินการต่อ
 
-## ส่วนคำถามที่พบบ่อย
-1. **ฉันจะอัปเดตเวอร์ชันไลบรารี GroupDocs.Signature ใน Maven ได้อย่างไร**
-   - อัพเดต `<version>` แท็กในของคุณ `pom.xml` ไฟล์ไปยังหมายเลขเวอร์ชันที่ต้องการ
-2. **ฉันสามารถใช้ GroupDocs.Signature ร่วมกับไลบรารีเอกสารอื่นได้หรือไม่**
-   - ใช่ สามารถรวมเข้ากับเครื่องมือประมวลผลเอกสารอื่น ๆ เพื่อเพิ่มประสิทธิภาพการทำงานได้
-3. **ใบอนุญาตชั่วคราวสำหรับ GroupDocs.Signature คืออะไร?**
-   - ใบอนุญาตชั่วคราวช่วยให้สามารถเข้าถึงคุณลักษณะทั้งหมดได้ในระหว่างการประเมินโดยไม่มีข้อจำกัด
-4. **ฉันจะจัดการรูปแบบไฟล์ที่ไม่รองรับในแอปพลิเคชันของฉันได้อย่างไร**
-   - นำตรรกะการจัดการข้อผิดพลาดมาใช้เพื่อจัดการและแจ้งให้ผู้ใช้ทราบเกี่ยวกับไฟล์ที่ไม่ได้รับการสนับสนุนอย่างเหมาะสม
-5. **มีชุมชนหรือฟอรัมสนับสนุนสำหรับ GroupDocs.Signature หรือไม่**
-   - ใช่ คุณสามารถเข้าถึงการสนับสนุนและการสนทนาได้ผ่านทาง [ฟอรัม GroupDocs](https://forum-groupdocs.com/c/signature/).
+**2. สร้างตัวกรองประเภทไฟล์แบบไดนามิก**  
+กำลังสร้างไฟล์พิกเซอร์หรืออินเทอร์เฟซอัปโหลด? สร้างรายการรูปแบบที่อนุญาตแบบไดนามิกแทนการดูแลอาเรย์คงที่ที่อาจไม่ตรงกับความสามารถของไลบรารี
 
-## ทรัพยากร
-- **เอกสารประกอบ**:สำรวจเอกสารรายละเอียดได้ที่ [เอกสาร GroupDocs](https://docs.groupdocs.com/signature/java/)
-- **ข้อมูลอ้างอิง API**:เข้าถึงรายละเอียด API ที่ครอบคลุมได้ที่ [เอกสารอ้างอิง API ของ GroupDocs](https://reference.groupdocs.com/signature/java/)
-- **ดาวน์โหลดห้องสมุด**: รับเวอร์ชันล่าสุดได้จาก [การเปิดตัว GroupDocs](https://releases.groupdocs.com/signature/java/)
-- **การซื้อและการออกใบอนุญาต**: เยี่ยมชม [หน้าการซื้อ](https://purchase.groupdocs.com/buy) สำหรับตัวเลือกการออกใบอนุญาต
-- **ทดลองใช้ฟรี**:ทดสอบคุณสมบัติต่างๆ โดยดาวน์โหลดรุ่นทดลองใช้ฟรีได้ที่ [ทดลองใช้ GroupDocs ฟรี](https://release)
+**3. สายการประมวลผลเอกสารหลายรูปแบบ**  
+หากคุณประมวลผลเอกสารจากแหล่งต่าง ๆ (แนบอีเมล, คลาวด์, การอัปโหลดของผู้ใช้) คุณต้องการการตรวจจับรูปแบบที่เชื่อถือได้เพื่อส่งไฟล์ไปยังตัวจัดการที่เหมาะสม
+
+**4. การรวมกับบริการจัดเก็บคลาวด์**  
+เมื่อซิงค์กับ AWS S3, Google Drive หรือ Azure Blob Storage ให้ตรวจสอบความเข้ากันได้ของเอกสารก่อนดาวน์โหลดและประมวลผล—ช่วยประหยัดแบนด์วิธและเวลา
+
+### เมื่อวิธีในตัวของ Java เพียงพอ
+
+สำหรับสถานการณ์ง่าย ๆ วิธีในตัวของ Java อาจพอใช้ได้:  
+- **ตรวจสอบนามสกุลไฟล์เท่านั้น**: `file.getName().endsWith(".pdf")`  
+- **ตรวจจับ MIME type**: `Files.probeContentType(path)`  
+- **การตรวจสอบพื้นฐาน**: เมื่อคุณควบคุมแหล่งอัปโหลดและเชื่อถือนามสกุลไฟล์  
+
+**ข้อควรระวังสำคัญ:** วิธีในตัวสามารถหลอกได้ ไฟล์ที่เปลี่ยนนามสกุลจาก `malicious.exe` เป็น `document.pdf` จะผ่านการตรวจสอบนามสกุลแต่จะล้มเหลวเมื่อทำการตรวจสอบที่แท้จริง GroupDocs.Signature ตรวจสอบส่วนหัวของไฟล์อย่างลึกซึ้ง
+
+## ปัญหาและการแก้ไขทั่วไป
+
+ต่อไปนี้คือปัญหาที่คุณอาจเจอและวิธีแก้ไขอย่างรวดเร็ว
+
+### ปัญหา 1: รายการว่างหรือเป็น Null
+
+**Symptom:** `getSupportedFileTypes()` คืนรายการว่างหรือ null  
+
+**Causes & Solutions:**  
+- **Library not properly initialized**: ตรวจสอบว่า dependency ของ Maven/Gradle ถูกเพิ่มและ sync อย่างถูกต้อง  
+- **Version compatibility**: ยืนยันว่าคุณใช้เวอร์ชัน 23.12 หรือใหม่กว่า (เวอร์ชันเก่าอาจมี API แตกต่าง)  
+- **Classpath issues**: หากใช้ JAR แบบ manual ให้แน่ใจว่าเพิ่มลงใน classpath อย่างถูกต้อง  
+
+**Quick fix:**  
+```java
+List<FileType> formats = FileType.getSupportedFileTypes();
+if (formats == null || formats.isEmpty()) {
+    System.err.println("Error: No file types loaded. Check library initialization.");
+    return;
+}
+```
+
+### ปัญหา 2: ไม่พบรูปแบบที่คาดหวัง
+
+**Symptom:** รูปแบบที่คุณคาดว่าจะทำงานไม่อยู่ในรายการที่รองรับ  
+
+**Possible reasons:**  
+- ใช้รูปแบบพิเศษที่ต้องการปลั๊กอินเพิ่มเติม (บางรูปแบบ CAD หรือการแพทย์ต้องโมดูลแยก)  
+- รูปแบบนั้นเพิ่มในเวอร์ชันใหม่—ตรวจสอบ release notes  
+- รูปแบบอาจรองรับการอ่านแต่ไม่รองรับการทำลายลายเซ็น (GroupDocs.Signature เน้นการเพิ่มลายเซ็น)  
+
+**Debugging approach:**  
+```java
+// Check for specific format
+boolean hasPDF = supportedFileTypes.stream()
+    .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(".pdf"));
+System.out.println("PDF supported: " + hasPDF);
+```
+
+### ปัญหา 3: ประสิทธิภาพลดลงเมื่อรายการรูปแบบใหญ่
+
+**Symptom:** การเรียก `getSupportedFileTypes()` ซ้ำทำให้แอปช้าลง  
+
+**Solution:** แคชผลลัพธ์! รายการนี้ไม่เปลี่ยนแปลงระหว่างรันของแอปพลิเคชัน  
+
+```java
+public class FormatCache {
+    private static List<FileType> cachedFormats = null;
+    
+    public static List<FileType> getSupportedFormats() {
+        if (cachedFormats == null) {
+            cachedFormats = FileType.getSupportedFileTypes();
+        }
+        return cachedFormats;
+    }
+}
+```
+
+รูปแบบนี้ทำให้คุณเรียกไลบรารีเพียงครั้งเดียวต่ออายุการทำงานของ JVM
+
+### ปัญหา 4: ข้อจำกัดที่เกี่ยวกับใบอนุญาต
+
+**Symptom:** แสดงคำเตือนการประเมินหรือรูปแบบที่รองรับถูกจำกัด  
+
+**Solution:**  
+- ใส่ใบอนุญาตก่อนเรียกเมธอดของ GroupDocs ใด ๆ  
+- ตรวจสอบว่า path ของไฟล์ใบอนุญาตถูกต้อง  
+- ตรวจสอบวันหมดอายุหากใช้ใบอนุญาตแบบจำกัดเวลา  
+
+```java
+try {
+    License license = new License();
+    license.setLicense("path/to/GroupDocs.Signature.lic");
+} catch (Exception e) {
+    System.err.println("License error: " + e.getMessage());
+}
+```
+
+## แนวทางปฏิบัติที่ดีที่สุดสำหรับการตรวจจับรูปแบบไฟล์
+
+### 1. ตรวจสอบตั้งแต่ต้น, ล้มเหลวเร็ว
+
+ตรวจสอบรูปแบบไฟล์ให้เร็วที่สุดใน pipeline ของคุณ:  
+
+```java
+public boolean validateFileFormat(String filePath) {
+    String extension = getFileExtension(filePath);
+    List<FileType> supported = FormatCache.getSupportedFormats();
+    
+    boolean isSupported = supported.stream()
+        .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(extension));
+    
+    if (!isSupported) {
+        throw new UnsupportedFormatException(
+            "File format " + extension + " is not supported"
+        );
+    }
+    return true;
+}
+```
+
+ช่วยป้องกันการเสียเวลาประมวลผลไฟล์ที่ไม่รองรับ
+
+### 2. ให้ข้อเสนอแนะที่ชัดเจนแก่ผู้ใช้
+
+เมื่อปฏิเสธไฟล์ ให้บอกผู้ใช้ว่ารูปแบบใดบ้างที่ **รองรับ**:  
+
+```java
+public String getSupportedFormatsMessage() {
+    List<FileType> formats = FormatCache.getSupportedFormats();
+    String extensions = formats.stream()
+        .map(FileType::getExtension)
+        .collect(Collectors.joining(", "));
+    
+    return "Supported formats: " + extensions;
+}
+```
+
+### 3. อย่าเชื่อเพียงนามสกุลไฟล์
+
+ไฟล์ที่เปลี่ยนนามสกุลจาก `.exe` เป็น `.pdf` จะมีนามสกุล `.pdf` แต่ไม่ใช่ PDF ที่แท้จริง GroupDocs.Signature ตรวจสอบเนื้อหาแท้จริง—แต่คุณยังควรผสานวิธีหลายอย่างเข้าด้วยกัน:  
+
+```java
+// First check extension (fast)
+if (!hasValidExtension(file)) {
+    return false;
+}
+
+// Then validate with library (more thorough)
+try (Signature signature = new Signature(file)) {
+    // If initialization succeeds, format is valid
+    return true;
+} catch (Exception e) {
+    return false;
+}
+```
+
+### 4. จัดการข้อยกเว้นอย่างสุภาพ
+
+การตรวจสอบไฟล์อาจล้มเหลวด้วยเหตุผลหลายอย่างนอกเหนือจากรูปแบบที่ไม่รองรับ:  
+
+```java
+public ValidationResult validateDocument(String path) {
+    try {
+        // Your validation logic
+        return ValidationResult.success();
+    } catch (UnsupportedFormatException e) {
+        return ValidationResult.failure("Unsupported format: " + e.getMessage());
+    } catch (IOException e) {
+        return ValidationResult.failure("File access error: " + e.getMessage());
+    } catch (Exception e) {
+        return ValidationResult.failure("Unexpected error: " + e.getMessage());
+    }
+}
+```
+
+### 5. ตรวจสอบการเปลี่ยนแปลงการสนับสนุนรูปแบบ
+
+เมื่ออัปเดตไลบรารี GroupDocs.Signature ให้ตรวจสอบ release notes สำหรับ:  
+- รูปแบบใหม่ที่เพิ่มเข้ามา  
+- รูปแบบที่หยุดสนับสนุน  
+- การเปลี่ยนแปลงพฤติกรรมในการตรวจจับ  
+
+พิจารณาเพิ่ม unit test เพื่อยืนยันว่ารูปแบบที่คาดหวังยังคงรองรับ:  
+
+```java
+@Test
+public void testEssentialFormatsSupported() {
+    List<String> required = Arrays.asList(".pdf", ".docx", ".xlsx");
+    List<FileType> supported = FileType.getSupportedFileTypes();
+    
+    for (String format : required) {
+        assertTrue(
+            supported.stream().anyMatch(ft -> ft.getExtension().equals(format)),
+            format + " should be supported"
+        );
+    }
+}
+```
+
+## พิจารณาด้านประสิทธิภาพ
+
+การเพิ่มประสิทธิภาพการตรวจจับรูปแบบไฟล์อาจดูเล็กน้อย แต่มีผลเมื่อประมวลผลเอกสารหลายพันไฟล์หรืออัปโหลดพร้อมกันหลายไฟล์
+
+### การจัดการหน่วยความจำ
+
+**กลยุทธ์การแคช:** อย่างที่กล่าวไว้ก่อนหน้า แคชรายการรูปแบบที่รองรับ:  
+
+```java
+// Good: Load once, reuse many times
+private static final List<FileType> SUPPORTED_FORMATS = 
+    FileType.getSupportedFileTypes();
+
+// Bad: Loads list every time method is called
+public boolean isSupported(String ext) {
+    return FileType.getSupportedFileTypes().stream()
+        .anyMatch(ft -> ft.getExtension().equals(ext));
+}
+```
+
+**ทำไมถึงสำคัญ:** การโหลดรายการรูปแบบต้องใช้รีเฟล็กชันและการเริ่มต้นไลบรารีภายใน การทำครั้งเดียวช่วยประหยัด CPU และการจัดสรรหน่วยความจำ
+
+### แนวทางการใช้ทรัพยากร
+
+**สำหรับสถานการณ์ปริมาณสูง:**  
+- ใช้แคชที่ปลอดภัยต่อเธรด (ตัวอย่างข้างต้นเป็น immutable)  
+- พิจารณา lazy initialization หากแอปไม่ต้องการตรวจจับรูปแบบบ่อย ๆ  
+- ปิดอ็อบเจกต์ `Signature` อย่างรวดเร็วหลังการประมวลผลเพื่อปลดปล่อยทรัพยากร  
+
+```java
+try (Signature signature = new Signature(filePath)) {
+    // Process document
+} // Automatically closed, resources freed
+```
+
+### การเพิ่มประสิทธิภาพการประมวลผลแบบชุด
+
+หากต้องตรวจสอบหลายไฟล์พร้อมกัน ให้พิจารณาการทำ parallel:  
+
+```java
+List<String> files = Arrays.asList("doc1.pdf", "doc2.docx", "doc3.xlsx");
+
+// Process in parallel
+files.parallelStream()
+    .forEach(file -> {
+        if (validateFileFormat(file)) {
+            processDocument(file);
+        }
+    });
+```
+
+**คำเตือน:** อย่า parallel มากเกินไป หากเป็น I/O bound (อ่านจากดิสก์) เธรดมากเกินไปอาจไม่ช่วย ทดสอบเพื่อหาจำนวนเธรดที่เหมาะสม
+
+### เคล็ดลับการปรับจูน JVM
+
+สำหรับแอปพลิเคชันที่หนักด้านเอกสาร:  
+- เพิ่มขนาด heap: `-Xmx2g` (ปรับตามความต้องการ)  
+- ตรวจสอบ garbage collection: ใช้ `-XX:+PrintGCDetails` เพื่อหาปัญหา  
+- พิจารณา G1GC เพื่อเวลาหยุดที่สั้นกว่า: `-XX:+UseG1GC`
+
+## การประยุกต์ใช้งานและการรวมระบบ
+
+มาดูสถานการณ์จริงที่การตรวจจับรูปแบบไฟล์เป็นสิ่งจำเป็น
+
+### 1. ระบบจัดการเอกสาร
+
+**สถานการณ์:** ผู้ใช้อัปโหลดเอกสารที่ต้องทำการจัดทำดัชนี, ประมวลผล, และจัดเก็บ  
+
+**รูปแบบการนำไปใช้:**  
+```java
+public class DocumentUploadHandler {
+    public void handleUpload(MultipartFile file) {
+        // Validate format first
+        if (!isFormatSupported(file.getOriginalFilename())) {
+            throw new InvalidFormatException(
+                "Please upload: " + getSupportedFormatsString()
+            );
+        }
+        
+        // Process valid document
+        processAndStore(file);
+    }
+    
+    private boolean isFormatSupported(String filename) {
+        String ext = getExtension(filename);
+        return FormatCache.getSupportedFormats().stream()
+            .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(ext));
+    }
+}
+```
+
+### 2. การรวมกับการจัดเก็บคลาวด์
+
+**สถานการณ์:** ซิงค์เอกสารจาก AWS S3 หรือ Google Drive และประมวลผลเฉพาะรูปแบบที่รองรับ  
+
+**ประโยชน์:** หลีกเลี่ยงการดาวน์โหลดและประมวลผลไฟล์ที่ไม่รองรับ ลดแบนด์วิธและเวลา  
+
+```java
+public void syncFromS3(String bucketName) {
+    S3Client s3 = S3Client.create();
+    ListObjectsV2Request listReq = ListObjectsV2Request.builder()
+        .bucket(bucketName)
+        .build();
+    
+    ListObjectsV2Response listing = s3.listObjectsV2(listReq);
+    
+    for (S3Object object : listing.contents()) {
+        if (isFormatSupported(object.key())) {
+            // Download and process only supported formats
+            downloadAndProcess(bucketName, object.key());
+        } else {
+            logger.info("Skipping unsupported format: " + object.key());
+        }
+    }
+}
+```
+
+### 3. ระบบอัตโนมัติการทำงานขององค์กร
+
+**สถานการณ์:** ส่งต่อเอกสารผ่าน pipeline ต่าง ๆ ตามประเภทไฟล์  
+
+**ตัวอย่าง:** PDF ไปยัง workflow ลายเซ็น, สเปรดชีตไปยังการสกัดข้อมูล, รูปภาพไปยัง OCR  
+
+```java
+public void routeDocument(String filePath) {
+    try (Signature signature = new Signature(filePath)) {
+        FileType type = signature.getDocumentInfo().getFileType();
+        
+        switch (type.getExtension()) {
+            case ".pdf":
+            case ".docx":
+                sendToSignatureWorkflow(filePath);
+                break;
+            case ".xlsx":
+            case ".csv":
+                sendToDataExtractionWorkflow(filePath);
+                break;
+            case ".jpg":
+            case ".png":
+                sendToOCRWorkflow(filePath);
+                break;
+            default:
+                logger.warn("No workflow defined for: " + type.getExtension());
+        }
+    }
+}
+```
+
+### 4. การสร้างตัวเลือกประเภทไฟล์
+
+**สถานการณ์:** สร้างคอมโพเนนต์ UI ที่แสดงรูปแบบไฟล์ที่รองรับแบบไดนามิก  
+
+**ตัวอย่างการบูรณาการฝั่ง Frontend:**  
+```java
+@RestController
+public class FormatController {
+    @GetMapping("/api/supported-formats")
+    public ResponseEntity<List<String>> getSupportedFormats() {
+        List<String> extensions = FileType.getSupportedFileTypes().stream()
+            .map(FileType::getExtension)
+            .sorted()
+            .collect(Collectors.toList());
+        
+        return ResponseEntity.ok(extensions);
+    }
+}
+```
+
+ส่วน frontend ของคุณสามารถใช้ข้อมูลนี้เพื่อกำหนดค่า component การอัปโหลดไฟล์:  
+```javascript
+// Frontend code (for context, not part of Java implementation)
+fetch('/api/supported-formats')
+    .then(res => res.json())
+    .then(formats => {
+        fileInput.accept = formats.join(',');
+    });
+```
+
+## วิธีตรวจสอบนามสกุลไฟล์ java?
+
+โหลดชื่อไฟล์, แยกส่วนต่อท้าย, แล้วเปรียบเทียบกับรายการแคชที่ได้จาก `Signature.getSupportedFileTypes()` วิธีสองขั้นตอนนี้รับประกันว่าคุณตรวจสอบกับแคตาล็อกที่อัปเดตล่าสุด ไม่ใช่แค่ array ที่กำหนดเอง และยังป้องกันการปลอมแปลงนามสกุลไฟล์ เพราะ GroupDocs.Signature ตรวจสอบส่วนหัวของไฟล์ก่อนทำการประมวลผลต่อ
+
+## GroupDocs.Signature คืออะไร?
+
+GroupDocs.Signature เป็นไลบรารี Java ที่ช่วยนักพัฒนาเพิ่ม, ตรวจสอบ, และจัดการลายเซ็นดิจิทัลบนเอกสารกว่า 50 รูปแบบ ให้ API แบบรวมศูนย์สำหรับ PDF, Office, รูปภาพ, และอื่น ๆ รองรับสถานการณ์ซับซ้อนเช่นไฟล์เข้ารหัส, เอกสารที่มีรหัสผ่าน, และลายเซ็นหลายหน้า
+
+## ทำไมต้องใช้การตรวจจับแบบใช้ไลบรารีแทนวิธีในตัวของ Java?
+
+การตรวจจับแบบใช้ไลบรารีตรวจสอบส่วนหัวและโครงสร้างภายในของไฟล์จริง ทำให้มั่นใจว่าเนื้อหาเข้ากับรูปแบบที่อ้างอิงได้อย่างแท้จริง วิธีในตัวเช่น `Files.probeContentType` หรือการตรวจสอบสตริงนามสกุลสามารถหลอกได้โดยการเปลี่ยนนามสกุลของไฟล์อันตรายเป็น `.pdf` GroupDocs.Signature ขจัดความเสี่ยงนี้ด้วยการวิเคราะห์เนื้อหาอย่างลึกซึ้งก่อนทำการประมวลผลใด ๆ
+
+## ควรแคชรายการรูปแบบไฟล์ที่รองรับเมื่อใด?
+
+แคชรายการรูปแบบที่รองรับเมื่อแอปเริ่มต้นหรือครั้งแรกที่ต้องการใช้ แล้วใช้คอลเลกชันที่ไม่เปลี่ยนแปลงตลอดอายุการทำงานของ JVM การแคชมีประโยชน์อย่างยิ่งในเว็บเซอร์วิสที่มีปริมาณสูง ซึ่งแต่ละคำขออาจทำให้เกิดการรีเฟล็กชันของไลบรารีที่ใช้เวลาหลายมิลลิวินาทีต่อการเรียก
+
+## วิธีจัดการกับรูปแบบไฟล์ที่ไม่รองรับใน Java?
+
+ตรวจจับรูปแบบที่ไม่รองรับตั้งแต่ต้น, บันทึกเหตุการณ์เพื่อการตรวจสอบ, แล้วส่งข้อความข้อผิดพลาดที่ชัดเจนให้ผู้ใช้พร้อมรายการนามสกุลที่อนุญาต วิธีนี้ช่วยปรับประสบการณ์ผู้ใช้และลดภาระการประมวลผลที่ไม่จำเป็นบนแบ็กเอนด์
+
+## คำถามที่พบบ่อย
+
+**Q: ฉันจะอัปเดตเวอร์ชันของ GroupDocs.Signature ใน Maven อย่างไร?**  
+A: เปลี่ยนค่า `<version>` ในไฟล์ `pom.xml` เป็นเวอร์ชันที่ต้องการ แล้วรัน `mvn clean install` ตรวจสอบ [release notes](https://releases.groupdocs.com/signature/java/) เพื่อดูการเปลี่ยนแปลงที่อาจทำให้โค้ดเสียหาย
+
+**Q: GroupDocs.Signature สามารถตรวจจับรูปแบบไฟล์ได้แม้ว่านามสกุลจะผิดหรือไม่?**  
+A: ได้ ไลบรารีทำการตรวจสอบตามเนื้อหา ดังนั้นไฟล์ที่เปลี่ยนนามสกุลจาก `.exe` เป็น `.pdf` จะถูกปฏิเสธว่าไม่ใช่ PDF ที่ถูกต้อง `getSupportedFileTypes()` เพียงแสดงรายการรูปแบบที่ไลบรารีสามารถจัดการได้; คุณยังต้องพยายามเปิดไฟล์เพื่อยืนยันประเภทจริง
+
+**Q: ความแตกต่างระหว่าง free trial กับ temporary license คืออะไร?**  
+A: Free trial ให้เข้าถึงทันทีแต่มีลายน้ำและข้อจำกัดบางอย่าง Temporary license ให้การเข้าถึงเต็มรูปแบบเป็นเวลา 30 วันโดยไม่มีลายน้ำ เหมาะสำหรับการทดสอบในสภาพแวดล้อมที่คล้ายการผลิต
+
+**Q: ฉันควรจัดการไฟล์รูปแบบที่ไม่รองรับในแอปอย่างไร?**  
+A: ส่งข้อความข้อผิดพลาดสั้น ๆ เช่น “รูปแบบไม่รองรับ. นามสกุลที่รองรับคือ: .pdf, .docx, .xlsx, .png, .jpg.” บันทึกเหตุการณ์เพื่อการตรวจสอบความปลอดภัยและอาจแสดง tooltip ใน UI ที่ระบุประเภทที่อนุญาต
+
+**Q: GroupDocs.Signature ทำงานกับไฟล์ที่เข้ารหัสหรือมีรหัสผ่านหรือไม่?**  
+A: ใช้ได้ แต่ต้องส่งรหัสผ่านเมื่อสร้างอ็อบเจกต์ `Signature` การตรวจจับรูปแบบไฟล์เองไม่ต้องการรหัสผ่าน แต่การประมวลผลต่อ (เช่น การเพิ่มลายเซ็น) จะต้องใช้
+
+**Q: มีชุมชนหรือฟอรั่มสนับสนุนสำหรับ GroupDocs.Signature หรือไม่?**  
+A: มีแน่นอน! เยี่ยมชม [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) เพื่อเข้าร่วมการสนทนาชุมชน, ตัวอย่างโค้ด, และรับคำตอบโดยตรงจากทีม GroupDocs
+
+## แหล่งข้อมูล
+
+**Documentation:**  
+- [GroupDocs.Signature for Java Documentation](https://docs.groupdocs.com/signature/java/) – คู่มือและบทแนะนำอย่างละเอียด  
+- [API Reference](https://reference.groupdocs.com/signature/java/) – เอกสาร API ครบถ้วนของคลาสและเมธอด  
+
+**Downloads and Licensing:**  
+- [Download Library](https://releases.groupdocs.com/signature/java/) – รุ่นล่าสุดและประวัติเวอร์ชัน  
+- [Purchase Licenses](https://purchase.groupdocs.com/buy) – ตัวเลือกราคาและใบอนุญาต  
+- [Free Trial](https://releases.groupdocs.com/signature/java/) – เริ่มทดสอบได้ทันที  
+
+**Support and Community:**  
+- [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) – การสนทนาชุมชนและการสนับสนุน  
+
+---  
+
+**Last Updated:** 2026-05-11  
+**Tested With:** GroupDocs.Signature 23.12 for Java  
+**Author:** GroupDocs  
+
+```xml
+<version>24.1</version>  <!-- Update to newer version -->
+```
+
+```java
+try {
+    validateAndProcess(file);
+} catch (UnsupportedFormatException e) {
+    return ResponseEntity
+        .badRequest()
+        .body("Unsupported format. Please upload: " + getSupportedFormatsString());
+}
+```
+
+```java
+LoadOptions loadOptions = new LoadOptions();
+loadOptions.setPassword("your-password");
+Signature signature = new Signature("protected.pdf", loadOptions);
+```
+
+## บทเรียนที่เกี่ยวข้อง
+
+- [Add QR Code to PDF Java - Complete Guide with GroupDocs.Signature](/signature/java/qr-code-signatures/qr-code-signatures-java-groupdocs/)
+- [Java Text Signature Search - A Complete Guide to Document Verification with GroupDocs.Signature](/signature/java/search-verification/java-text-signature-search-groupdocs-signature/)
+- [Digital Signature in Java - Complete Guide to Certificate Loading and Document Signing](/signature/java/digital-signatures/digital-signature-loading-signing-groupdocs-java/)
