@@ -1,45 +1,112 @@
 ---
-"date": "2025-05-08"
-"description": "GroupDocs.Signature for Java'yı kullanarak çeşitli dosya biçimlerini verimli bir şekilde nasıl yöneteceğinizi ve destekleyeceğinizi öğrenin. Bu adım adım kılavuzla belge yönetim sisteminizi geliştirin."
-"title": "GroupDocs.Signature for Java'da Ana Dosya Biçimi Desteği - Kapsamlı Bir Kılavuz"
-"url": "/tr/java/advanced-options/groupdocs-signature-java-file-format-support/"
-"weight": 1
+categories:
+- Java Document Processing
+date: '2026-05-11'
+description: Learn how to check file extension java and validate document formats
+  using GroupDocs.Signature. Complete guide with code examples, troubleshooting tips,
+  and best practices for document type checking.
+keywords:
+- check file extension java
+- validate document type java
+- java upload file validation
+- how to detect file format java
+lastmod: '2025-01-02'
+linktitle: Java File Format Detection Guide
+schemas:
+- author: GroupDocs
+  dateModified: '2026-05-11'
+  description: Learn how to check file extension java and validate document formats
+    using GroupDocs.Signature. Complete guide with code examples, troubleshooting
+    tips, and best practices for document type checking.
+  headline: Java File Format Detection - Validate and Check Document Types
+  type: TechArticle
+- questions:
+  - answer: Change the `<version>` tag in your `pom.xml` to the desired version, then
+      run `mvn clean install`. Always review the [release notes](https://releases.groupdocs.com/signature/java/)
+      for breaking changes.
+    question: How do I update my GroupDocs.Signature library version in Maven?
+  - answer: Yes. The library performs content‑based validation, so a file renamed
+      from `.exe` to `.pdf` will be rejected as not a valid PDF during processing.
+      `getSupportedFileTypes()` only lists formats the library can handle; you still
+      need to attempt opening the file to verify its true type.
+    question: Can GroupDocs.Signature detect file formats even if the extension is
+      wrong?
+  - answer: The free trial gives immediate access but includes evaluation watermarks
+      and some feature limits. A temporary license provides full feature access for
+      30 days without watermarks, ideal for thorough testing in a production‑like
+      environment.
+    question: What's the difference between a free trial and temporary license?
+  - answer: 'Return a concise error like “Unsupported format. Supported extensions
+      are: .pdf, .docx, .xlsx, .png, .jpg.” Log the incident for security monitoring
+      and consider notifying the user with a UI tooltip that lists allowed types.'
+    question: How should I handle unsupported file formats in my application?
+  - answer: Yes, but you must supply the password when creating the `Signature` instance.
+      Format detection itself does not require the password, but any subsequent processing
+      (e.g., adding a signature) will.
+    question: Does GroupDocs.Signature work with encrypted or password‑protected files?
+  type: FAQPage
+tags:
+- file-validation
+- java-libraries
+- document-management
+- format-detection
+title: Java File Format Detection - Validate and Check Document Types
 type: docs
+url: /tr/java/advanced-options/groupdocs-signature-java-file-format-support/
+weight: 1
 ---
-# GroupDocs.Signature for Java'da Ana Dosya Biçimi Desteği: Kapsamlı Bir Kılavuz
 
-## giriiş
+# java dosya uzantısını kontrol et – Java Dosya Formatı Tespiti: Belge Türlerini Doğrula ve Kontrol Et
 
-Java için GroupDocs.Signature kütüphanesi kullanılarak, belge yönetim sisteminizin çok çeşitli dosya biçimlerini destekleyerek iyileştirilmesi kolaylaştırılabilir. Bu eğitim, bu güçlü aracın nasıl kullanılacağına dair ayrıntılı bir kılavuz sunarak, uygulamalarınızda sorunsuz entegrasyon ve güçlü işlevsellik sağlar.
+En yaygın görevlerden biri, bir belgeyi işlemeye başlamadan önce **java dosya uzantısını kontrol et**.  
 
-### Öğrenecekleriniz:
-- Desteklenen dosya biçimlerini almak için Java için GroupDocs.Signature'ı uyguluyorum.
-- Bağımlılıkları kurma ve ortamınızı yapılandırma.
-- Diğer sistemlerle pratik uygulamaları ve entegrasyon olanaklarını keşfetmek.
-- Kütüphaneye özgü performans iyileştirme tekniklerinin uygulanması.
+Hiç bir dosya yükleyip uygulamanızın beklenen formatta olmadığı için çökmesini gördünüz mü? Yalnız değilsiniz. Java’da dosya formatlarını tespit etmek ve doğrulamak, sağlam belge işleme uygulamaları oluşturmak için kritik öneme sahiptir—ancak bu, kolayca taklit edilebilen veya hatalı olabilen dosya uzantılarını kontrol etmekten daha zordur.
 
-Sisteminizin çeşitli belge türlerini zahmetsizce işleyebilmesini sağlamak için bu yolculuğa çıkın. Başlamadan önce, sorunsuz bir kurulum deneyimi için gerekli tüm ön koşulların hazır olduğundan emin olun.
+Bu rehberde, basit uzantı kontrolünün ötesine geçen güçlü bir kütüphane olan GroupDocs.Signature kullanarak Java’da dosya formatlarını güvenilir bir şekilde nasıl tespit edeceğinizi öğreneceksiniz. İster bir belge yönetim sistemi, kullanıcı yüklemelerini doğrulama ya da bulut depolama hizmetleriyle entegrasyon yapıyor olun, çeşitli belge türlerini güvenle ele almanız için pratik teknikler keşfedeceksiniz.
 
-## Ön koşullar
+**Öğrenecekleriniz:**
+- Java’da desteklenen dosya formatlarını programlı olarak nasıl alacağınız
+- Kütüphane tabanlı tespiti yerleşik Java yaklaşımlarıyla ne zaman kullanmanız gerektiği
+- Dosya türlerini doğrularken sıkça yapılan hatalar (ve bunlardan nasıl kaçınılacağı)
+- Gerçek dünya entegrasyon senaryoları ve performans optimizasyon ipuçları
+- Format tespiti sorunları için sorun giderme stratejileri
 
-GroupDocs.Signature for Java'yı uygulamadan önce şu gereksinimleri göz önünde bulundurun:
+Sonunda, Java uygulamalarınıza hemen ekleyebileceğiniz çalışan bir uygulama elde edeceksiniz. Başlamadan önce her şeyin hazır olduğundan emin olun.
 
-### Gerekli Kütüphaneler ve Sürümler:
-- **GroupDocs.Signature Kütüphanesi**: 23.12 veya üzeri sürüm önerilir.
-- Geliştirme ortamınızın Java'yı (JDK 1.8+) desteklediğinden emin olun.
+## Hızlı Yanıtlar
+- **Java dosya uzantısını kontrol etmenin en hızlı yolu nedir?** `Signature.getSupportedFileTypes()` kullanarak tam listeyi alın ve dosyanın uzantısını buna karşılaştırın.
+- **GroupDocs.Signature’ı kullanmak için lisansa ihtiyacım var mı?** Geliştirme için ücretsiz deneme sürümü yeterlidir; kalıcı lisans tüm değerlendirme sınırlamalarını kaldırır.
+- **Dosyayı tamamen okumadan yüklemeleri doğrulayabilir miyim?** Evet—GroupDocs.Signature dosya başlığını inceler, bu da tüm belgeyi yüklemekten çok daha ucuzdur.
+- **GroupDocs.Signature kaç formatı destekliyor?** PDF, DOCX, XLSX, PPTX, JPG, PNG ve daha fazlası dahil olmak üzere 50’den fazla giriş ve çıkış formatı.
+- **Format listesini önbelleğe almak gerekli mi?** Önbellekleme, tekrar eden yansıma (reflection) yükünü ortadan kaldırır ve yüksek hacimli hizmetlerde verimliliği artırır.
 
-### Ortam Kurulum Gereksinimleri:
-- Bağımlılık yönetimi için Maven veya Gradle'a dair temel bilgi.
-- Temel Java programlama kavramlarına aşinalık.
+## Önkoşullar
 
-Bu ön koşullar sağlandıktan sonra projenizde Java için GroupDocs.Signature kurulumuna geçelim.
+Dosya formatı tespitine başlamadan önce aşağıdaki temel gereksinimlerin hazır olduğundan emin olun:
 
-## Java için GroupDocs.Signature Kurulumu
+### Gerekli Kütüphaneler ve Sürümler
+- **GroupDocs.Signature Library**: Sürüm 23.12 veya üzeri (en son kararlı sürümü kullanacağız)
+- **Java Development Kit**: JDK 1.8 veya üzeri (daha iyi performans için JDK 11+ önerilir)
+- **Build Tool**: Maven 3.x veya Gradle 6.x bağımlılık yönetimi için
 
-GroupDocs.Signature kütüphanesini kurmak, Maven veya Gradle gibi paket yöneticileri kullanılarak oldukça kolaydır. Şu adımları izleyin:
+### Ortam Kurulum Gereksinimleri
+Aşağıdaki konularda rahat olmalısınız:
+- Temel Java programlama kavramları (sınıflar, döngüler, importlar)
+- Maven veya Gradle ile bağımlılık yönetimi
+- IDE ya da komut satırından Java uygulamaları çalıştırma
 
-### Maven Kullanımı:
-Bu bağımlılığı şuraya ekleyin: `pom.xml` dosya:
+**Hızlı ipucu:** Büyük belgelerle çalışıyorsanız ya da dosyaları eşzamanlı işliyorsanız, JVM’nize yeterli yığın belleği ayırın (optimizasyona daha sonra değineceğiz).
+
+Ortamınız hazır olduğuna göre, GroupDocs.Signature’ı projenize eklemeye geçelim.
+
+## GroupDocs.Signature'ı Java için Kurma
+
+GroupDocs.Signature’ı projenize eklemek oldukça basittir—tercih ettiğiniz yapı aracını seçin ve adımları izleyin.
+
+### Maven Kullanarak
+
+`pom.xml` dosyanıza şu bağımlılığı ekleyin:
+
 ```xml
 <dependency>
     <groupId>com.groupdocs</groupId>
@@ -47,106 +114,580 @@ Bu bağımlılığı şuraya ekleyin: `pom.xml` dosya:
     <version>23.12</version>
 </dependency>
 ```
-### Gradle Kullanımı:
-Bu satırı ekleyin `build.gradle` dosya:
+
+Bağımlılığı ekledikten sonra kütüphaneyi indirmek için `mvn clean install` komutunu çalıştırın.
+
+### Gradle Kullanarak
+
+`build.gradle` dosyanıza şu satırı ekleyin:
+
 ```gradle
 implementation 'com.groupdocs:groupdocs-signature:23.12'
 ```
-### Doğrudan İndirme:
-Alternatif olarak, en son sürümü şu adresten indirin: [Java sürümleri için GroupDocs.Signature](https://releases.groupdocs.com/signature/java/).
 
-#### Lisans Alma Adımları:
-- **Ücretsiz Deneme**: Fonksiyonları test etmek için kullanılabilir.
-- **Geçici Lisans**: Değerlendirme süresince sınırsız erişim için geçici lisans edinin.
-- **Satın almak**: Kalıcı bir lisans satın alın [GroupDocs Satın Alma Sayfası](https://purchase.groupdocs.com/buy) eğer denemeden memnun kalırsa.
+Ardından Gradle projenizi senkronize edin ya da `gradle build` komutunu çalıştırın.
+
+### Doğrudan İndirme Alternatifi
+
+Bir yapı aracı kullanmıyor musunuz? JAR dosyasını doğrudan [GroupDocs.Signature for Java releases](https://releases.groupdocs.com/signature/java/) adresinden indirebilir ve sınıf yolunuza manuel olarak ekleyebilirsiniz. (Dürüst olmak gerekirse, Maven ya da Gradle kullanmak ileride baş ağrısını önleyecektir.)
+
+### Lisans Edinme Adımları
+
+GroupDocs.Signature esnek lisans seçenekleri sunar:
+
+- **Free Trial**: Test için mükemmel—[kredi kartı gerektirmeden](https://releases.groupdocs.com/signature/java/) hemen başlayabilirsiniz
+- **Temporary License**: Daha fazla değerlendirme süresine mi ihtiyacınız var? Sınırsız erişim için 30 günlük geçici lisans isteyin
+- **Purchase**: Üretim ortamına geçmeye hazır olduğunuzda, kalıcı lisansı [GroupDocs Purchase Page](https://purchase.groupdocs.com/buy) üzerinden alın
+
+**Pro ipucu:** Tüm özellikleri keşfetmek için önce ücretsiz deneme sürümünü kullanın. Geçici lisans, su işaretlerini ve sınırlamaları kaldırır, böylece daha uzun bir değerlendirme süresi elde edersiniz.
 
 ### Temel Başlatma ve Kurulum
-Java uygulamanızda GroupDocs.Signature'ı aşağıdaki gibi başlatın:
+
+`Signature` GroupDocs.Signature’ın tüm işlemler için çekirdek giriş noktasıdır. Belge yükleme, format işleme ve imza işlemlerini kapsar.
+
+Java uygulamanızda GroupDocs.Signature’ı başlatmanın yolu aşağıdadır:
+
 ```java
 import com.groupdocs.signature.Signature;
-// Signature sınıfının bir örneğini oluşturun.
+
+// Create an instance of Signature class
 Signature signature = new Signature("sample.pdf");
 ```
-Kurulum tamamlandığına göre, desteklenen dosya formatlarını elde etmek için özelliğin nasıl uygulanacağını inceleyelim.
+
+Bu, belirtilen belge için bir signature nesnesi oluşturur. Gerçek belgelerle çalışırken bu deseni kullanacaksınız, ancak desteklenen formatları almak için belirli bir dosyaya ihtiyacınız olmayacak (bunu bir sonraki bölümde göstereceğiz).
+
+Kurulum tamamlandığına göre, desteklenen dosya formatlarını tespit edip alacak temel işlevi uygulamaya başlayalım.
 
 ## Uygulama Kılavuzu
 
-Bu bölüm, GroupDocs.Signature for Java'yı kullanarak desteklenen dosya biçimlerinin listesini alma ve görüntüleme işlevselliğini uygulamada size yol gösterir.
+Şimdi pratik kısmı ele alıyoruz. Belge işleme hattınız için bir “uyumluluk denetleyicisi” oluşturacak basit bir yardımcı program inşa edeceğiz.
 
-### Genel Bakış
-Ana amaç, `FileType` Desteklenen tüm dosya türlerini almak için kütüphane içindeki yardımcı program. Bu özellik, uygulamanızın önceden sabit kodlama yapmadan çeşitli belge türlerine dinamik olarak uyum sağlamasını sağlar.
+### Bunun Önemi
 
-#### Adım Adım Uygulama
+Belge işleme özellikleri geliştirmeye başlamadan önce kütüphanenizin hangi dosya türlerini desteklediğini bilmeniz gerekir. Bu uygulama, bilgiyi dinamik olarak sağlar; yani:
+- Güncelliğini yitiren sabit uzantı listeleri yok
+- Kullanıcı yüklemelerini desteklenen formatlarla kolayca doğrulayabilirsiniz
+- UI’nizde dosya türü filtreleri oluşturmak için hızlı bir referans elde edersiniz
+
+### Adım Adım Uygulama
+
 **1. Gerekli Sınıfları İçe Aktarın**
-GroupDocs.Signature'dan gerekli sınıfları içe aktararak başlayın:
+
+`FileType`, format tespiti için geçiş noktasıdır; desteklenen belge türleriyle ilgili tüm meta verileri içerir.
+
 ```java
 import com.groupdocs.signature.domain.documentpreview.FileType;
 import java.util.List;
 ```
-**2. Alma İşlevselliği için Bir Sınıf Oluşturun**
-Adında bir sınıf oluşturun `GetSupportedFileFormats` ve dosya türlerini almak için ana işlevselliği içerir:
+
+`FileType` sınıfı, uzantı, MIME tipi ve açıklama gibi özellikleri ortaya çıkaran GroupDocs.Signature’ın her desteklenen format tanımlayıcısıdır.
+
+**2. Getirme Sınıfını Oluşturun**
+
+Tam uygulama aşağıdadır:
+
 ```java
 public class GetSupportedFileFormats {
     public static void run() {
-        // FileType yardımcı programından desteklenen dosya türlerinin listesini alın.
+        // Retrieve a list of supported file types from the FileType utility.
         List<FileType> supportedFileTypes = FileType.getSupportedFileTypes();
 
-        // Her FileType nesnesi üzerinde yineleme yapın ve uzantısını konsola yazdırın.
+        // Iterate over each FileType object and print its extension to the console.
         for (FileType fileType : supportedFileTypes) {
             System.out.print("\n" + fileType.getExtension());
         }
     }
 }
 ```
-**Açıklama:**
-- `getSupportedFileTypes()`: GroupDocs.Signature'ın desteklediği tüm dosya biçimlerini alır ve bunları bir liste olarak döndürür `FileType` nesneler.
-- Döngü listeyi yineleyerek her dosya uzantısını çıktı olarak verir.
 
-### Anahtar Yapılandırma Seçenekleri
-Bu özellik basit olsa da, uygulamanızın ortamının olası istisnaları veya desteklenen türlerin büyük listelerini işleyecek şekilde doğru şekilde yapılandırıldığından emin olun.
+**Ne oluyor?**
+- `getSupportedFileTypes()`: Bu statik metod, kütüphanenin iç kayıtlarını sorgular ve `FileType` nesneleri olarak tam bir format listesi döndürür
+- Döngü, her formatın uzantısını (ör. `.pdf`, `.docx`, `.xlsx`) çıktılar
+- Her `FileType` nesnesi ayrıca erişebileceğiniz ek meta verilere sahiptir (aşağıda inceleyeceğiz)
 
-**Sorun Giderme İpuçları:**
-- Tüm bağımlılıkların projenizin yapı yapılandırmasına doğru şekilde dahil edildiğini doğrulayın.
-- GroupDocs.Signature kitaplığında ek dosya biçimlerine destek sağlayabilecek güncellemeleri kontrol edin.
+### Temel Uzantıların Ötesinde
 
-## Pratik Uygulamalar
+`FileType` nesnesi sadece uzantıları değil, daha fazlasını da sunar. İşte alabileceğiniz diğer bilgiler:
 
-GroupDocs.Signature tarafından hangi dosya formatlarının desteklendiğini anlamak çeşitli pratik uygulamalara kapı açabilir:
-1. **Belge Yönetim Sistemleri**:Mevcut formatlara göre belge işleme süreçlerini otomatik olarak uyarlayın.
-2. **Bulut Depolama Hizmetleriyle Entegrasyon**: AWS S3 veya Google Drive gibi servislerden belge yüklerken veya indirirken uyumluluğu sağlayın.
-3. **Kurumsal Uygulamalar**: Kullanıcıların çeşitli belge türleriyle sorunsuz bir şekilde çalışmasını sağlayarak iş akışlarını geliştirin.
+```java
+for (FileType fileType : supportedFileTypes) {
+    System.out.println("Extension: " + fileType.getExtension());
+    System.out.println("Format: " + fileType.getFileFormat());
+    // Additional properties available depending on version
+}
+```
 
-## Performans Hususları
-GroupDocs.Signature kullanırken uygulamanızın performansını optimize etmek birkaç stratejiyi içerir:
-- **Verimli Bellek Yönetimi**Özellikle büyük belgelerle uğraşırken Java belleğini etkili bir şekilde yönetin.
-- **Kaynak Kullanım Yönergeleri**: Kaynak kullanımını izleyin ve uygulamanızın özel ihtiyaçlarına göre optimize edin.
+Bu, kullanıcı dostu format adları göstermeniz ya da formatları türlerine göre gruplamanız gerektiğinde (belgeler vs. elektronik tablolar vs. görseller) faydalıdır.
 
-Bu en iyi uygulamalara bağlı kalmak, uygulamalarınızda optimum performansı korumanıza yardımcı olacaktır.
+## Bu Yaklaşımı Ne Zaman Kullanmalı
 
-## Çözüm
-Bu eğitimde, desteklenen dosya biçimlerini almak ve uygulamanızın yeteneklerini geliştirmek için GroupDocs.Signature for Java'yı nasıl kullanacağınızı inceledik. Belirtilen uygulama adımlarını izleyerek, bu özelliği projelerinize sorunsuz bir şekilde entegre edebilirsiniz.
+Her durum kütüphane tabanlı bir çözüme ihtiyaç duymaz. GroupDocs.Signature’ın format tespiti parladığı zamanlar şunlardır:
 
-### Sonraki Adımlar:
-- GroupDocs.Signature'ın sunduğu ek özellikleri deneyin.
-- Diğer hizmetler veya platformlarla entegrasyon seçeneklerini keşfedin.
+### Mükemmel Kullanım Durumları
 
-Uygulamaya başlamaya hazır mısınız? Bu teknikleri deneyin ve Java uygulamalarınıza nasıl fayda sağlayabileceklerini görün!
+**1. Belge Yükleme Doğrulayıcıları Oluşturma**  
+Kullanıcılar dosya yüklediğinde, formatları sunucu tarafında doğrulamak istersiniz (tek başına istemci doğrulamasına asla güvenmeyin). Bu yaklaşım, işleme başlamadan önce kapsamlı bir desteklenen format listesine karşı kontrol etmenizi sağlar.
 
-## SSS Bölümü
-1. **Maven'da GroupDocs.Signature kütüphanesinin sürümünü nasıl güncellerim?**
-   - Güncelle `<version>` etiketini ekle `pom.xml` dosyayı istediğiniz sürüm numarasına taşıyın.
-2. **GroupDocs.Signature'ı diğer belge kütüphaneleriyle birlikte kullanabilir miyim?**
-   - Evet, gelişmiş işlevsellik için diğer belge işleme araçlarıyla entegre edilebilir.
-3. **GroupDocs.Signature için geçici lisans nedir?**
-   - Geçici lisans, değerlendirme sırasında kısıtlama olmaksızın tüm özelliklere erişim sağlar.
-4. **Uygulamamda desteklenmeyen dosya biçimlerini nasıl yönetebilirim?**
-   - Desteklenmeyen dosyaları düzgün bir şekilde yönetmek ve kullanıcıları bu dosyalar hakkında bilgilendirmek için hata işleme mantığını uygulayın.
-5. **GroupDocs.Signature için bir topluluk veya destek forumu var mı?**
-   - Evet, destek ve tartışmalara şu şekilde erişebilirsiniz: [GroupDocs Forum](https://forum.groupdocs.com/c/signature/).
+**2. Dinamik Dosya Türü Filtreleri Oluşturma**  
+Bir dosya seçici ya da yükleme arayüzü mi yapıyorsunuz? Statik bir dizi tutmak yerine izin verilen formatları dinamik olarak oluşturun; böylece kütüphanenizin yetenekleriyle senkronize kalırsınız.
+
+**3. Çok‑Formatlı Belge İşleme Hatları**  
+E‑posta ekleri, bulut depolama veya kullanıcı yüklemeleri gibi çeşitli kaynaklardan belgeler işliyorsanız, dosyaları uygun işleyicilere yönlendirmek için güvenilir format tespiti gerekir.
+
+**4. Bulut Depolama Hizmetleriyle Entegrasyon**  
+AWS S3, Google Drive veya Azure Blob Storage ile senkronize olurken, dosyaları indirmeden ve işlemeye başlamadan önce belge uyumluluğunu doğrulayın—böylece bant genişliği ve işlem süresi tasarrufu sağlarsınız.
+
+### Yerleşik Java Yöntemleri Yeterli Olabilir
+
+Daha basit senaryolar için Java’nın yerleşik yaklaşımları yeterli olabilir:
+- **Sadece uzantı kontrolü**: `file.getName().endsWith(".pdf")`
+- **MIME tipi tespiti**: `Files.probeContentType(path)`
+- **Temel doğrulama**: Yükleme kaynağını kontrol edebildiğiniz ve uzantılara güvenebildiğiniz durumlar
+
+**Önemli uyarı:** Yerleşik yöntemler kandırılabilir. `.exe` dosyasını `.pdf` olarak yeniden adlandırmak uzantı kontrolünü geçebilir ancak gerçek doğrulama başarısız olur. GroupDocs.Signature, daha derin bir içerik incelemesi yaparak bu riski ortadan kaldırır.
+
+## Yaygın Sorunlar ve Sorun Giderme
+
+Karşılaşabileceğiniz problemler ve hızlı çözümleri aşağıdadır.
+
+### Sorun 1: Boş veya Null Liste Döndürüldü
+
+**Belirti:** `getSupportedFileTypes()` boş bir liste ya da null döndürüyor.
+
+**Nedenler ve Çözümler:**
+- **Kütüphane düzgün başlatılmadı**: Maven/Gradle bağımlılığınızın doğru eklendiğini ve senkronize edildiğini kontrol edin
+- **Sürüm uyumsuzluğu**: 23.12 veya üzeri bir sürüm kullandığınızdan emin olun (eski sürümlerde API farklı olabilir)
+- **Sınıf yolu sorunları**: Manuel JAR dosyaları kullanıyorsanız, sınıf yoluna doğru eklendiğini doğrulayın
+
+**Hızlı düzeltme:**
+```java
+List<FileType> formats = FileType.getSupportedFileTypes();
+if (formats == null || formats.isEmpty()) {
+    System.err.println("Error: No file types loaded. Check library initialization.");
+    return;
+}
+```
+
+### Sorun 2: Beklenen Format Eksik
+
+**Belirti:** Kullanmak istediğiniz bir format desteklenen listede yok.
+
+**Olası nedenler:**
+- Ek plugin gerektiren özel bir format kullanıyorsunuz (bazı CAD veya tıbbi görüntü formatları ayrı modüller ister)
+- Format daha yeni bir sürümde eklenmiş—sürüm notlarını kontrol edin
+- Format okuma için destekleniyor ancak imza işlemleri için değil (GroupDocs.Signature esas olarak imza eklemek içindir, tüm işlemler tüm formatları eşit desteklemez)
+
+**Hata ayıklama yaklaşımı:**
+```java
+// Check for specific format
+boolean hasPDF = supportedFileTypes.stream()
+    .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(".pdf"));
+System.out.println("PDF supported: " + hasPDF);
+```
+
+### Sorun 3: Büyük Format Listelerinde Performans Düşüşü
+
+**Belirti:** `getSupportedFileTypes()` tekrar tekrar çağrıldığında uygulama yavaşlıyor.
+
+**Çözüm:** Sonuçları önbelleğe alın! Bu liste çalışma zamanında değişmez:
+
+```java
+public class FormatCache {
+    private static List<FileType> cachedFormats = null;
+    
+    public static List<FileType> getSupportedFormats() {
+        if (cachedFormats == null) {
+            cachedFormats = FileType.getSupportedFileTypes();
+        }
+        return cachedFormats;
+    }
+}
+```
+
+Bu desen, uygulama yaşam döngüsü boyunca kütüphaneyi yalnızca bir kez sorgulamanızı sağlar.
+
+### Sorun 4: Lisansla İlgili Kısıtlamalar
+
+**Belirti:** Değerlendirme uyarıları alıyor ya da format desteği sınırlı.
+
+**Çözüm:** 
+- Her GroupDocs metodundan önce lisansınızı uygulayın
+- Lisans dosyası yolunun doğru olduğundan emin olun
+- Zaman sınırlı bir lisans kullanıyorsanız son tarihini kontrol edin
+
+```java
+try {
+    License license = new License();
+    license.setLicense("path/to/GroupDocs.Signature.lic");
+} catch (Exception e) {
+    System.err.println("License error: " + e.getMessage());
+}
+```
+
+## Dosya Formatı Tespiti İçin En İyi Uygulamalar
+
+Uygulamalarınızı sağlam ve sürdürülebilir kılmak için bu yönergeleri izleyin.
+
+### 1. Erken Doğrula, Hızlı Başarısız Ol
+
+İşleme hattınızın mümkün olan en erken aşamasında dosya formatlarını kontrol edin:
+
+```java
+public boolean validateFileFormat(String filePath) {
+    String extension = getFileExtension(filePath);
+    List<FileType> supported = FormatCache.getSupportedFormats();
+    
+    boolean isSupported = supported.stream()
+        .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(extension));
+    
+    if (!isSupported) {
+        throw new UnsupportedFormatException(
+            "File format " + extension + " is not supported"
+        );
+    }
+    return true;
+}
+```
+
+Bu, desteklenmeyen formatlarda boşa işlem yapılmasını önler.
+
+### 2. Kullanıcıya Açık Geri Bildirim Sağla
+
+Dosyaları reddederken, hangi formatların **desteklendiğini** kullanıcıya net bir şekilde söyleyin:
+
+```java
+public String getSupportedFormatsMessage() {
+    List<FileType> formats = FormatCache.getSupportedFormats();
+    String extensions = formats.stream()
+        .map(FileType::getExtension)
+        .collect(Collectors.joining(", "));
+    
+    return "Supported formats: " + extensions;
+}
+```
+
+### 3. Dosya Uzantılarına Tek Başına Güvenme
+
+`.exe` dosyasını `.pdf` olarak yeniden adlandırmak uzantıyı `.pdf` yapar ama geçerli bir PDF değildir. GroupDocs.Signature gerçek içeriği doğrular; yine de iki yaklaşımı birleştirin:
+
+```java
+// First check extension (fast)
+if (!hasValidExtension(file)) {
+    return false;
+}
+
+// Then validate with library (more thorough)
+try (Signature signature = new Signature(file)) {
+    // If initialization succeeds, format is valid
+    return true;
+} catch (Exception e) {
+    return false;
+}
+```
+
+### 4. İstisnaları Zarifçe Ele Al
+
+Doğrulama sırasında pek çok farklı hata ortaya çıkabilir:
+
+```java
+public ValidationResult validateDocument(String path) {
+    try {
+        // Your validation logic
+        return ValidationResult.success();
+    } catch (UnsupportedFormatException e) {
+        return ValidationResult.failure("Unsupported format: " + e.getMessage());
+    } catch (IOException e) {
+        return ValidationResult.failure("File access error: " + e.getMessage());
+    } catch (Exception e) {
+        return ValidationResult.failure("Unexpected error: " + e.getMessage());
+    }
+}
+```
+
+### 5. Format Desteği Değişikliklerini İzle
+
+GroupDocs.Signature kütüphanesini güncellediğinizde, sürüm notlarını kontrol edin:
+- Yeni eklenen formatlar
+- Kullanımdan kaldırılan formatlar
+- Format tespitindeki davranış değişiklikleri
+
+Beklenen formatların desteklendiğini doğrulayan birim testleri eklemeyi düşünün:
+
+```java
+@Test
+public void testEssentialFormatsSupported() {
+    List<String> required = Arrays.asList(".pdf", ".docx", ".xlsx");
+    List<FileType> supported = FileType.getSupportedFileTypes();
+    
+    for (String format : required) {
+        assertTrue(
+            supported.stream().anyMatch(ft -> ft.getExtension().equals(format)),
+            format + " should be supported"
+        );
+    }
+}
+```
+
+## Performans Düşünceleri
+
+Dosya formatı tespiti küçük bir detay gibi görünebilir, ancak binlerce belge işleyen ya da eşzamanlı yüklemeler yapan sistemlerde önem kazanır.
+
+### Bellek Yönetimi
+
+**Önbellekleme stratejisi:** Daha önce bahsedildiği gibi, desteklenen format listesini önbelleğe alın:
+
+```java
+// Good: Load once, reuse many times
+private static final List<FileType> SUPPORTED_FORMATS = 
+    FileType.getSupportedFileTypes();
+
+// Bad: Loads list every time method is called
+public boolean isSupported(String ext) {
+    return FileType.getSupportedFileTypes().stream()
+        .anyMatch(ft -> ft.getExtension().equals(ext));
+}
+```
+
+**Neden önemli:** Listeyi yüklemek yansıma (reflection) ve iç kütüphane başlatma gerektirir. Bunu bir kez yapmak CPU döngülerini ve bellek tahsislerini tasarruf ettirir.
+
+### Kaynak Kullanım Kılavuzları
+
+**Yüksek hacimli senaryolar için:**
+- Format listesi için iş parçacığı‑güvenli bir önbellek kullanın (yukarıdaki örnek değiştirilemez olduğu için iş parçacığı‑güvenlidir)
+- Format tespiti her zaman gerekli değilse tembel (lazy) başlatmayı düşünün
+- Belgeleri işlerken `Signature` nesnelerini zamanında kapatın, böylece kaynaklar serbest kalır
+
+```java
+try (Signature signature = new Signature(filePath)) {
+    // Process document
+} // Automatically closed, resources freed
+```
+
+### Toplu İşleme Optimizasyonu
+
+Birden çok dosyayı doğruluyorsanız paralelleştirmeyi değerlendirin:
+
+```java
+List<String> files = Arrays.asList("doc1.pdf", "doc2.docx", "doc3.xlsx");
+
+// Process in parallel
+files.parallelStream()
+    .forEach(file -> {
+        if (validateFileFormat(file)) {
+            processDocument(file);
+        }
+    });
+```
+
+**Uyarı:** Aşırı paralelleştirmeyin. Girdi/çıktı (I/O) sınırlıysa fazla iş parçacığı fayda sağlamaz. En uygun iş parçacığı sayısını test ederek bulun.
+
+### JVM Ayarlama İpuçları
+
+Belge‑ağır uygulamalar için:
+- Yığın boyutunu artırın: `-Xmx2g` (gereksinimlerinize göre ayarlayın)
+- Çöp toplama (garbage collection) izleyin: `-XX:+PrintGCDetails` ile sorunları tespit edin
+- Daha iyi duraklama süreleri için G1GC kullanın: `-XX:+UseG1GC`
+
+## Pratik Uygulamalar ve Entegrasyon
+
+Dosya formatı tespitinin kritik olduğu gerçek dünya senaryolarına bir göz atalım.
+
+### 1. Belge Yönetim Sistemleri
+
+**Senaryo:** Kullanıcılar belgeler yükler, indekslenir, işlenir ve depolanır.
+
+**Uygulama deseni:**
+```java
+public class DocumentUploadHandler {
+    public void handleUpload(MultipartFile file) {
+        // Validate format first
+        if (!isFormatSupported(file.getOriginalFilename())) {
+            throw new InvalidFormatException(
+                "Please upload: " + getSupportedFormatsString()
+            );
+        }
+        
+        // Process valid document
+        processAndStore(file);
+    }
+    
+    private boolean isFormatSupported(String filename) {
+        String ext = getExtension(filename);
+        return FormatCache.getSupportedFormats().stream()
+            .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(ext));
+    }
+}
+```
+
+### 2. Bulut Depolama Entegrasyonu
+
+**Senaryo:** AWS S3 veya Google Drive’dan belgeler senkronize edilir ve yalnızca desteklenen formatlar işlenir.
+
+**Neden faydalı:** Desteklenmeyen dosyaları indirmeyi ve işlemeyi önleyerek bant genişliği ve işlem süresinden tasarruf sağlarsınız.
+
+```java
+public void syncFromS3(String bucketName) {
+    S3Client s3 = S3Client.create();
+    ListObjectsV2Request listReq = ListObjectsV2Request.builder()
+        .bucket(bucketName)
+        .build();
+    
+    ListObjectsV2Response listing = s3.listObjectsV2(listReq);
+    
+    for (S3Object object : listing.contents()) {
+        if (isFormatSupported(object.key())) {
+            // Download and process only supported formats
+            downloadAndProcess(bucketName, object.key());
+        } else {
+            logger.info("Skipping unsupported format: " + object.key());
+        }
+    }
+}
+```
+
+### 3. Kurumsal İş Akışı Otomasyonu
+
+**Senaryo:** Belgeler türlerine göre farklı iş akışlarına yönlendirilir.
+
+**Örnek:** PDF’ler imza akışına, elektronik tablolar veri çıkarımına, görseller OCR işlemine gider.
+
+```java
+public void routeDocument(String filePath) {
+    try (Signature signature = new Signature(filePath)) {
+        FileType type = signature.getDocumentInfo().getFileType();
+        
+        switch (type.getExtension()) {
+            case ".pdf":
+            case ".docx":
+                sendToSignatureWorkflow(filePath);
+                break;
+            case ".xlsx":
+            case ".csv":
+                sendToDataExtractionWorkflow(filePath);
+                break;
+            case ".jpg":
+            case ".png":
+                sendToOCRWorkflow(filePath);
+                break;
+            default:
+                logger.warn("No workflow defined for: " + type.getExtension());
+        }
+    }
+}
+```
+
+### 4. Dosya Türü Seçicileri Oluşturma
+
+**Senaryo:** Dinamik format desteğiyle UI bileşenleri oluşturun.
+
+**Frontend entegrasyon örneği:**
+```java
+@RestController
+public class FormatController {
+    @GetMapping("/api/supported-formats")
+    public ResponseEntity<List<String>> getSupportedFormats() {
+        List<String> extensions = FileType.getSupportedFileTypes().stream()
+            .map(FileType::getExtension)
+            .sorted()
+            .collect(Collectors.toList());
+        
+        return ResponseEntity.ok(extensions);
+    }
+}
+```
+
+Frontend’iniz bu verileri dosya yükleme bileşenlerini yapılandırmak için kullanabilir:
+```javascript
+// Frontend code (for context, not part of Java implementation)
+fetch('/api/supported-formats')
+    .then(res => res.json())
+    .then(formats => {
+        fileInput.accept = formats.join(',');
+    });
+```
+
+## Java dosya uzantısını nasıl kontrol ederim?
+
+Dosya adını yükleyin, uzantısını çıkarın ve `Signature.getSupportedFileTypes()` tarafından döndürülen önbelleklenmiş listeyle karşılaştırın. Bu iki adımlı yaklaşım, sabit bir diziye göre değil güncel bir kataloğa karşı kontrol ettiğinizden emin olmanızı sağlar ve taklit edilmiş uzantıları da engeller; çünkü GroupDocs.Signature dosya başlığını doğruladıktan sonra diğer işlemlere devam eder.
+
+## GroupDocs.Signature Nedir?
+
+GroupDocs.Signature, geliştiricilerin 50’den fazla belge formatı üzerinde dijital imzalar eklemesini, doğrulamasını ve yönetmesini sağlayan bir Java kütüphanesidir. PDF, Office, görseller ve daha birçok tür için birleşik bir API sunar; şifreli dosyalar, parola korumalı belgeler ve çok sayfalı imzalar gibi karmaşık doğrulama senaryolarını da ele alır.
+
+## Neden kütüphane tabanlı tespit, Java yerleşik yöntemleri yerine kullanılmalı?
+
+Kütüphane tabanlı tespit, gerçek dosya başlığını ve iç yapıyı inceler; böylece içeriğin iddia edilen formatla gerçekten eşleştiğinden emin olur. `Files.probeContentType` gibi yerleşik yöntemler ya da basit uzantı kontrolleri, dosyaların uzantısını değiştirerek kandırılabilir. GroupDocs.Signature, herhangi bir ek işleme başlamadan önce derin içerik analizi yaparak bu riski ortadan kaldırır.
+
+## Desteklenen dosya formatlarını ne zaman önbelleğe almalıyım?
+
+Uygulama başlangıcında ya da ilk ihtiyaç anında format listesini önbelleğe alın ve JVM ömrü boyunca değişmez koleksiyonu yeniden kullanın. Özellikle her istekte yansıma‑ağır kütüphane başlatması yapan yüksek‑throughput web servislerinde önbellekleme, çağrı başına milisaniyelerlik gecikmeyi ortadan kaldırır.
+
+## Java'da desteklenmeyen dosya formatları nasıl ele alınır?
+
+Desteklenmeyen formatı erken tespit edin, deneme amacıyla kaydı tutun ve kullanıcıya izin verilen uzantıların bir listesini içeren net bir hata mesajı döndürün. Bu yaklaşım, kullanıcı deneyimini iyileştirir ve arka uçta gereksiz işlem yükünü azaltır.
+
+## Sıkça Sorulan Sorular
+
+**S: Maven’da GroupDocs.Signature kütüphane sürümümü nasıl güncellerim?**  
+C: `pom.xml` içindeki `<version>` etiketini istediğiniz sürüme değiştirin, ardından `mvn clean install` çalıştırın. Her zaman [release notes](https://releases.groupdocs.com/signature/java/) kısmını kırılma değişiklikleri için inceleyin.
+
+**S: GroupDocs.Signature, uzantı yanlış olsa bile dosya formatlarını tespit edebilir mi?**  
+C: Evet. Kütüphane içerik‑tabanlı doğrulama yapar; bu yüzden `.exe` dosyasını `.pdf` olarak yeniden adlandırmak, işlem sırasında geçerli bir PDF olmadığı için reddedilir. `getSupportedFileTypes()` yalnızca kütüphanenin işleyebileceği formatları listeler; gerçek tipin doğrulanması için dosyayı açmanız gerekir.
+
+**S: Ücretsiz deneme ile geçici lisans arasındaki fark nedir?**  
+C: Ücretsiz deneme anında erişim sağlar ancak değerlendirme su işaretleri ve bazı özellik sınırlamaları içerir. Geçici lisans, 30 gün boyunca su işareti olmadan tam özellik erişimi sunar; üretim‑benzeri bir ortamda kapsamlı testler için idealdir.
+
+**S: Uygulamamda desteklenmeyen dosya formatlarını nasıl ele almalı?**  
+C: “Desteklenmeyen format. Desteklenen uzantılar: .pdf, .docx, .xlsx, .png, .jpg.” gibi kısa bir hata döndürün. Olayı güvenlik izleme için loglayın ve kullanıcıya izin verilen türleri gösteren bir UI tooltip’i sunmayı düşünün.
+
+**S: GroupDocs.Signature şifreli veya parola korumalı dosyalarla çalışıyor mu?**  
+C: Evet, ancak `Signature` örneği oluştururken parolayı sağlamalısınız. Format tespiti için parola gerekli değildir, ancak sonraki işlemler (ör. imza ekleme) için gereklidir.
+
+**S: GroupDocs.Signature için bir topluluk veya destek forumu var mı?**  
+C: Kesinlikle! [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) adresinde topluluk tartışmaları, kod örnekleri ve GroupDocs ekibinden doğrudan yanıtlar bulabilirsiniz.
 
 ## Kaynaklar
-- **Belgeleme**: Ayrıntılı belgeleri şu adreste inceleyin: [GroupDocs Belgeleri](https://docs.groupdocs.com/signature/java/)
-- **API Referansı**: Kapsamlı API ayrıntılarına şu adresten erişin: [GroupDocs API Referansı](https://reference.groupdocs.com/signature/java/)
-- **Kütüphaneyi İndir**: En son sürümü şu adresten edinin: [GroupDocs Sürümleri](https://releases.groupdocs.com/signature/java/)
-- **Satın Alma ve Lisanslama**: Ziyaret edin [satın alma sayfası](https://purchase.groupdocs.com/buy) lisanslama seçenekleri için.
-- **Ücretsiz Deneme**: Ücretsiz deneme sürümünü indirerek özellikleri test edin [GroupDocs Ücretsiz Deneme](https://release)
+
+**Documentation:**  
+- [GroupDocs.Signature for Java Documentation](https://docs.groupdocs.com/signature/java/) – Kapsamlı kılavuzlar ve öğreticiler  
+- [API Reference](https://reference.groupdocs.com/signature/java/) – Tüm sınıflar ve metodlar için eksiksiz API dokümantasyonu  
+
+**Downloads and Licensing:**  
+- [Download Library](https://releases.groupdocs.com/signature/java/) – En son sürümler ve sürüm geçmişi  
+- [Purchase Licenses](https://purchase.groupdocs.com/buy) – Fiyatlandırma ve lisans seçenekleri  
+- [Free Trial](https://releases.groupdocs.com/signature/java/) – Hemen test etmeye başlayın  
+
+**Support and Community:**  
+- [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) – Topluluk tartışmaları ve destek  
+
+---
+
+**Son Güncelleme:** 2026-05-11  
+**Tested With:** GroupDocs.Signature 23.12 for Java  
+**Author:** GroupDocs
+
+```xml
+<version>24.1</version>  <!-- Update to newer version -->
+```
+
+```java
+try {
+    validateAndProcess(file);
+} catch (UnsupportedFormatException e) {
+    return ResponseEntity
+        .badRequest()
+        .body("Unsupported format. Please upload: " + getSupportedFormatsString());
+}
+```
+
+```java
+LoadOptions loadOptions = new LoadOptions();
+loadOptions.setPassword("your-password");
+Signature signature = new Signature("protected.pdf", loadOptions);
+```
+
+## İlgili Eğitimler
+
+- [Add QR Code to PDF Java - Complete Guide with GroupDocs.Signature](/signature/java/qr-code-signatures/qr-code-signatures-java-groupdocs/)
+- [Java Text Signature Search - A Complete Guide to Document Verification with GroupDocs.Signature](/signature/java/search-verification/java-text-signature-search-groupdocs-signature/)
+- [Digital Signature in Java - Complete Guide to Certificate Loading and Document Signing](/signature/java/digital-signatures/digital-signature-loading-signing-groupdocs-java/)
